复制「基于道的方法范式：以《道德经》所载为例」中已翻译的部分
原文、译文有多种可能的部分暂按已翻译部分复制，未来再进一步完善。

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -6,15 +6,17 @@
 
 *論德*
 
-上德不德 是以有德 下德不失德 是以無德
+> 上德不德 是以有德 下德不失德 是以無德
 
-上德無爲 而無以爲也 上仁爲之 而無以爲也 上義為之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
+上等的方法不再是方法，由此而处于德（基于道的范式）的状态；下等的方法不失为是一种方法，由此而不处于德（基于道的范式）的状态。
 
-故失道而后德 失德而后仁 失仁而后義 失義而后禮 夫禮者 忠信之泊也 而亂之首也
+> 上德無爲 而無以爲也 上仁爲之 而無以爲也 上義為之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
 
-前識者 道之華也 而愚之首也
+> 故失道而后德 失德而后仁 失仁而后義 失義而后禮 夫禮者 忠信之泊也 而亂之首也
 
-是以大丈夫居亓厚而不居亓泊 居亓實而不居亓華 故去彼取此
+> 前識者 道之華也 而愚之首也
+
+> 是以大丈夫居亓厚而不居亓泊 居亓實而不居亓華 故去彼取此
 
 ### 2-39
 
@@ -34,11 +36,13 @@
 
 *聞道*
 
-上士聞道 堇而行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
+> 上士聞道 堇而行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
 
-是以建言有之曰 明道如費 進道如退 夷道如纇 上德如浴 大白如辱 廣德如不足 建德如偷 質真如渝 大方無隅 大器免成 大音希聲 天象無形 道殷無名
+> 是以建言有之曰 明道如費 進道如退 夷道如纇 上德如浴 大白如辱 廣德如不足 建德如偷 質真如渝 大方無隅 大器免成 大音希聲 天象無形 道殷無名
 
-夫唯道 善始且善成
+> 夫唯道 善始且善成
+
+只有道，既善于起始，又善于完成。
 
 ### 4-40
 
@@ -66,21 +70,25 @@
 
 *至柔*
 
-天下之至柔 馳騁於天下之致堅
+> 天下之至柔 馳騁於天下之致堅
 
-無有入於無間 吾是以知無為之有益
+> 無有入於無間 吾是以知無為之有益
 
-不言之教 無為之益 天下希能及之矣
+无形的能够进入没有任何缝隙之处。
+
+> 不言之教 無為之益 天下希能及之矣
 
 ### 7-44
 
 *立戒*
 
-名與身孰親 身與貨孰多 得與亡孰病
+> 名與身孰親 身與貨孰多 得與亡孰病
 
-甚愛必大費 多藏必厚亡
+> 甚愛必大費 多藏必厚亡
 
-故知足不辱 知止不殆 可以長久
+深切地沉浸于所爱好的事物中，必然会为此付出巨大的代价；大量地储藏物品，必然会随着这些殷实的藏品一起消亡。
+
+> 故知足不辱 知止不殆 可以長久
 
 ### 8-45
 
@@ -94,11 +102,13 @@
 
 *知足*
 
-天下有道 卻走馬以糞 天下無道 戎馬生於郊
+> 天下有道 卻走馬以糞 天下無道 戎馬生於郊
 
-罪莫大於可欲 禍莫大於不知足 咎莫憯於欲得
+> 罪莫大於可欲 禍莫大於不知足 咎莫憯於欲得
 
-故知足之足 恆足矣
+没有比激发欲望滋生更大的罪孽；没有比不知道满足更大的灾祸；没有比追求获取的欲望更大的罪责。
+
+> 故知足之足 恆足矣
 
 ### 10-47
 
@@ -114,35 +124,43 @@
 
 *無爲*
 
-爲學者日益 聞道者日損 損之又損 以至於無爲 無爲而無不爲
+> 爲學者日益 聞道者日損 損之又損 以至於無爲 無爲而無不爲
 
-將欲取天下也 恆無事 及亓有事也 不足以取天下
+体察道的人，愿意运用、应用的规律一天比一天少（搁置的规律一天比一天多）。愿意运用、应用的规律越来越少（搁置的规律越来越多），不断逼近，最终达到不做任何事的状态。什么也不做而没有什么是做不成的。
+
+> 將欲取天下也 恆無事 及亓有事也 不足以取天下
 
 ### 12-49
 
 *德善*
 
-聖人恆無心 以百姓之心為心
+> 聖人恆無心 以百姓之心為心
 
-善者善之 不善者亦善之 德善也
+> 善者善之 不善者亦善之 德善也
 
-信者信之 不信者亦信之 德信也
+善长的人会善长；不善长的人也会善长。
 
-聖人之在天下 歙歙焉 為天下渾心 百姓皆屬耳目焉 聖人皆咳之
+> 信者信之 不信者亦信之 德信也
+
+相信的人会相信；不相信的人也会相信。
+
+> 聖人之在天下 歙歙焉 為天下渾心 百姓皆屬耳目焉 聖人皆咳之
 
 ### 13-50
 
 *生死*
 
-出生 入死
+> 出生 入死
 
-生之徒十有三 死之徒十有三 而民生生 動皆之死地之十有三
+> 生之徒十有三 死之徒十有三 而民生生 動皆之死地之十有三
 
-夫何故也 以亓生生也
+> 夫何故也 以亓生生也
 
-蓋聞善攝生者 陵行不辟兕虎 入軍不被甲兵 兕無所椯亓角 虎無所措亓爪 兵無所容亓刃
+> 蓋聞善攝生者 陵行不辟兕虎 入軍不被甲兵 兕無所椯亓角 虎無所措亓爪 兵無所容亓刃
 
-夫何故也 以亓無死地焉
+> 夫何故也 以亓無死地焉
+
+因为没有可以让其死去的场所。
 
 ### 14-51
 
@@ -162,19 +180,21 @@
 
 *守母*
 
-天下有始 以爲天下母
+> 天下有始 以爲天下母
 
-既得亓母 以知亓子 復守亓母 沒身不殆
+> 既得亓母 以知亓子 復守亓母 沒身不殆
 
-塞亓兌 閉亓門 終身不堇
+得到其母之所在，就可以由此得到其子之所在，再回过头来守在其母之所在。终其一生，都能够免于危难。
 
-啓亓兌 濟亓事 終身不逨
+> 塞亓兌 閉亓門 終身不堇
 
-見小曰明 守柔曰強
+> 啓亓兌 濟亓事 終身不逨
 
-用亓光 復歸亓明
+> 見小曰明 守柔曰強
 
-毋遺身殃 是謂襲常
+> 用亓光 復歸亓明
+
+> 毋遺身殃 是謂襲常
 
 ### 16-53
 
@@ -292,17 +312,19 @@
 
 *無難*
 
-爲無爲 事無事 味無味
+> 爲無爲 事無事 味無味
 
-大小多少 報怨以德
+> 大小多少 報怨以德
 
-圖難乎亓易也 爲大乎亓細也 天下之難作於易 天下之大作於細
+> 圖難乎亓易也 爲大乎亓細也 天下之難作於易 天下之大作於細
 
-是以聖人終不爲大 故能成亓大
+解决困难问题从容易的地方开始入手；解决大的问题从细微乃至于不可见的地方开始入手。解决我们所处宇宙中的困难问题是从容易之处着手开始的；解决我们所处宇宙中的大问题是从细微乃至于不可见之处着手开始的。
 
-夫輕諾必寡信 多易必多難
+> 是以聖人終不爲大 故能成亓大
 
-是以聖人猶難之 故終於無難
+> 夫輕諾必寡信 多易必多難
+
+> 是以聖人猶難之 故終於無難
 
 ### 27-64
 
@@ -352,11 +374,13 @@
 
 *不積*
 
-信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
+> 信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
 
-聖人無積 既以爲人 己愈有 既以予人 己愈多
+> 聖人無積 既以爲人 己愈有 既以予人 己愈多
 
-故天之道 利而不害 人之道 爲而弗爭
+> 故天之道 利而不害 人之道 爲而弗爭
+
+人类所需遵循的方式是行动，但不涉足竞争。
 
 ### 32-67
 
@@ -376,9 +400,13 @@
 
 *不爭*
 
-善爲士者不武 善戰者不怒 善勝敵者弗與 善用人者爲之下
+> 善爲士者不武 善戰者不怒 善勝敵者弗與 善用人者爲之下
 
-是謂不爭之德 是謂用人 是謂天 古之極也
+善于胜任士的人并不使用军事武力的手段。善于在战场上临敌的人并不会动怒。善于战胜敌人的人并不会与敌方交锋。善于让人们发挥作用的人会把自己的位置置于人们之下。
+
+> 是謂不爭之德 是謂用人 是謂天 古之極也
+
+这就叫作不入竞争的德。
 
 ### 34-69
 
@@ -396,11 +424,13 @@
 
 *懷玉*
 
-吾言甚易知也 甚易行也 而人莫之能知也 而莫之能行也
+> 吾言甚易知也 甚易行也 而人莫之能知也 而莫之能行也
 
-言有君 事有宗 夫唯無知也 是以不我知
+我所言非常容易懂，也非常容易做，但是却没有人有能力理解，更别提做了。
 
-知我者希 則我貴矣 是以聖人被褐而懷玉
+> 言有君 事有宗 夫唯無知也 是以不我知
+
+> 知我者希 則我貴矣 是以聖人被褐而懷玉
 
 ### 36-71
 
@@ -424,13 +454,15 @@
 
 *天網*
 
-勇於敢者則殺 勇於不敢者則栝 此兩者或利或害
+> 勇於敢者則殺 勇於不敢者則栝 此兩者或利或害
 
-天之所惡 孰知亓故
+> 天之所惡 孰知亓故
 
-天之道 不彈而善勝 不言而善應 不召而自來 彈而善謀
+> 天之道 不彈而善勝 不言而善應 不召而自來 彈而善謀
 
-天網恢恢 疏而不失
+> 天網恢恢 疏而不失
+
+我们所处宇宙中的规律不仅多，而且像一张巨大的网一样装着一切。网上规律不占据的地方全是空间，可什么都无法逃离。
 
 ### 39-74
 
@@ -496,13 +528,15 @@
 
 *右介*
 
-和大怨 必有餘怨 焉可以爲善
+> 和大怨 必有餘怨 焉可以爲善
 
-是以聖人執右介 而不以責於人
+> 是以聖人執右介 而不以責於人
 
-故有德司介 無德司徹
+> 故有德司介 無德司徹
 
-夫天道無親 恆與善人
+> 夫天道無親 恆與善人
+
+我们所处宇宙中的规律并不亲近任何人，只是永远不变地赋能给那些善长的人。
 
 ## 道篇
 
@@ -527,14 +561,15 @@
 
 *觀徼*
 
-天下皆知美爲美 惡已 皆知善 訾不善矣
+> 天下皆知美爲美 惡已 皆知善 訾不善矣
 
-有無之相生也 難易之相成也 長短之相形也 高下之相盈也 音聲之相和也 先後之相隨 恆也
+> 有無之相生也 難易之相成也 長短之相形也 高下之相盈也 音聲之相和也 先後之相隨 恆也
 
-是以聖人居無爲之事 行不言之教
+> 是以聖人居無爲之事 行不言之教
 
-萬物 作而弗始也 爲而弗恃也 成功而弗居也 夫唯弗居 是以弗去
+> 萬物 作而弗始也 爲而弗恃也 成功而弗居也 夫唯弗居 是以弗去
 
+对于任何事物，要从事的话，就不要从启动的那部分着手；要行动的话，就不要依赖行动，而要以目标为本；要达成目标的话，就不要放不下成果。只有放下了，才不会失去。
 
 ### 47-3
 
@@ -580,47 +615,61 @@
 
 *無私*
 
-天長地久 天地之所以能長且久者 以亓不自生也 故能長生
+> 天長地久 天地之所以能長且久者 以亓不自生也 故能長生
 
-是以聖人芮亓身而身先 外亓身而身存
+> 是以聖人芮亓身而身先 外亓身而身存
 
-不以亓無私與 故能成亓私
+因此智慧的人把自己变化到更细粒度的维度中去从而让自身居于前端；到更粗粒度的维度中去从而让自身得以保存。（在两种情况中，都由于去到了不同维度中而使可见度被极大地降低了。“芮”、“外”就是用于描述这两种状况的。人类系统在很多情况下可以被看作是一个由每一个人为一个元素组成的元素序列。在这种时候，很多状况有利于居于序列前端的人们。）
+
+> 不以亓無私與 故能成亓私
 
 ### 52-8
 
 *治水*
 
-上善治水 水善利萬物而有靜 居眾之所惡 故幾於道矣
+> 上善治水 水善利萬物而有靜 居眾之所惡 故幾於道矣
 
-居善地 心善淵 予善天 言善信 正善治 事善能 動善時
+关于善长，上等的善长是善长像水一样。水善长向任何事物提供利益，但也能保持安静、不扰动，具备让万物沉浸于水的收纳性。水总是往低处流，最终停留在低处。这自然是天性憧憬人往高处走的人们所厌恶的。所以，水的特征几乎等同于道的特征。
 
-夫唯不争 故無尤
+> 居善地 心善淵 予善天 言善信 正善治 事善能 動善時
+
+> 夫唯不争 故無尤
 
 ### 53-9
 
 *持盈*
 
-持而盈之 不若亓已
+> 植而盈之 不若亓已
 
-揣而銳之 不可常葆之
+与其随着成长而使之满溢，不如适时使之停下来。
 
-金玉盈室 莫之守也
+> 揣而銳之 不可常葆之
 
-貴富而驕 自遺咎也
+> 金玉盈室 莫之守也
 
-功述身芮 天之道也
+贵重的财宝堆满了屋子，是没办法安全地守住的。
+
+> 貴富而驕 自遺咎也
+
+变得尊贵和富有而产生骄纵，是给自己预留下了罪责。
+
+> 功述身芮 天之道也
+
+在完成了目的之后，把自己变化到更细粒度的维度中去，这是我们所处宇宙的行事方式。
 
 ### 54-10
 
 *無不爲*
 
-戴營魄抱一 能毋離乎 摶氣至柔 能嬰兒乎
+> 戴營魄抱一 能毋離乎 摶氣至柔 能嬰兒乎
 
-脩除玄鑒 能毋疵乎 愛民栝國 能毋以知乎
+> 脩除玄鑒 能毋疵乎 愛民栝國 能毋以知乎
 
-天門啓闔 能爲雌乎 明白四達 能毋以知乎
+> 天門啓闔 能爲雌乎 明白四達 能毋以知乎
 
-生之 畜之 生而弗有 長而弗宰也 是謂玄德
+> 生之 畜之 生而弗有 長而弗宰也 是謂玄德
+
+产生。滋养。产生但不占有。栽培但不支配和主宰。
 
 ### 55-11
 
@@ -646,13 +695,15 @@
 
 *寵辱*
 
-寵辱若驚 貴大患若身
+> 寵辱若驚 貴大患若身
 
-何謂寵辱若驚 寵之爲下 得之若驚 失之若驚 是謂寵辱若驚
+> 何謂寵辱若驚 寵之爲下 得之若驚 失之若驚 是謂寵辱若驚
 
-何謂貴大患若身 吾所以有大患者 爲吾有身也 及吾無身 有何患
+> 何謂貴大患若身 吾所以有大患者 爲吾有身也 及吾無身 有何患
 
-故貴爲身於爲天下 若可以托天下矣 愛以身爲天下 如可以寄天下矣
+我会有大麻烦的原因，在于我有身体。等我没有身体，我还会有什么麻烦呢？
+
+> 故貴爲身於爲天下 若可以托天下矣 愛以身爲天下 如可以寄天下矣
 
 ### 58-14
 
@@ -750,13 +801,15 @@
 
 *從道*
 
-孔德之容 唯道是從 道之物 唯朢唯忽
+> 孔德之容 唯道是從 道之物 唯朢唯忽
 
-忽呵望呵 中有象呵 朢呵忽呵 中有物呵 幽呵鳴呵 中有請呵 亓請甚真 亓中有信
+从一个视觉非常受限的小洞窥视德的样子，可以发现德只遵循道。
 
-自今及古 亓名不去 以順眾父
+> 忽呵望呵 中有象呵 朢呵忽呵 中有物呵 幽呵鳴呵 中有請呵 亓請甚真 亓中有信
 
-吾何以知眾父之祭 以此
+> 自今及古 亓名不去 以順眾父
+
+> 吾何以知眾父之祭 以此
 
 ### 66-24
 
@@ -784,15 +837,17 @@
 
 *同道*
 
-希言自然
+> 希言自然
 
-飄風不終朝 暴雨不終日
+> 飄風不終朝 暴雨不終日
 
-孰爲此 天地而弗能久 又況於人乎
+> 孰爲此 天地而弗能久 又況於人乎
 
-故從事而道者同於道 德者同於德 失者同於失
+> 故從事而道者同於道 德者同於德 失者同於失
 
-同於德者 道亦德之 同於失者 道亦失之
+> 同於德者 道亦德之 同於失者 道亦失之
+
+与德保持一致的，道也会通过德为其赋能。
 
 ### 69-25
 
@@ -854,15 +909,17 @@
 
 *自然*
 
-將欲取天下而爲之 吾見亓弗得已
+> 將欲取天下而爲之 吾見亓弗得已
 
-夫天下 神器也 非可爲者也
+> 夫天下 神器也 非可爲者也
 
-爲者敗之 執者失之
+> 爲者敗之 執者失之
 
-物或行或隨 或炅或吹 或強或䂳 或培或橢
+做的人会败坏它；持有的人会失去它。
 
-是以聖人去甚 去大 去楮
+> 物或行或隨 或炅或吹 或強或䂳 或培或橢
+
+> 是以聖人去甚 去大 去楮
 
 ### 74-30
 
