所有原文变为引用格式

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -22,15 +22,15 @@
 
 *得一*
 
-昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以為天下正
+> 昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以為天下正
 
-亓致之也 謂天毋已清將恐裂 謂地毋已寧將恐發 謂神毋已霝將恐歇 謂浴毋已盈將恐竭 謂侯王毋已貴以高將恐蹶
+> 亓致之也 謂天毋已清將恐裂 謂地毋已寧將恐發 謂神毋已霝將恐歇 謂浴毋已盈將恐竭 謂侯王毋已貴以高將恐蹶
 
-故必貴而以賤爲本 必高矣而以下爲基
+> 故必貴而以賤爲本 必高矣而以下爲基
 
-夫是以侯王自謂曰孤 寡 不榖 此亓賤之爲本與 非也
+> 夫是以侯王自謂曰孤 寡 不榖 此亓賤之爲本與 非也
 
-故致數與無與 是故不欲祿祿若玉 硌硌若石
+> 故致數與無與 是故不欲祿祿若玉 硌硌若石
 
 ### 3-41
 
@@ -48,23 +48,23 @@
 
 *反復*
 
-反也者 道之動也 弱也者 道之用也
+> 反也者 道之動也 弱也者 道之用也
 
-天下之物生於有 有生於無
+> 天下之物生於有 有生於無
 
 ### 5-42
 
 *中和*
 
-道生一 一生二 二生三 三生萬物
+> 道生一 一生二 二生三 三生萬物
 
-萬物負陰而抱陽 中氣以爲和
+> 萬物負陰而抱陽 中氣以爲和
 
-天下之所惡 唯孤 寡 不穀 而王公以自名也
+> 天下之所惡 唯孤 寡 不穀 而王公以自名也
 
-勿或損之而益 益之而損 故人之所教 夕議而教人
+> 勿或損之而益 益之而損 故人之所教 夕議而教人
 
-故強良者不得死 我將以爲學父
+> 故強良者不得死 我將以爲學父
 
 ### 6-43
 
@@ -94,9 +94,9 @@
 
 *請靚*
 
-大成若缺 亓用不幣 大盈若沖 亓用不窮 大直如詘 大巧如拙 大贏如㶧
+> 大成若缺 亓用不幣 大盈若沖 亓用不窮 大直如詘 大巧如拙 大贏如㶧
 
-趮勝寒 靚勝炅 請靚可以爲天下正
+> 趮勝寒 靚勝炅 請靚可以爲天下正
 
 ### 9-46
 
@@ -114,11 +114,11 @@
 
 *知天下*
 
-不出於戶 以知天下 不窺於牖 以知天道
+> 不出於戶 以知天下 不窺於牖 以知天道
 
-亓出也彌遠 亓知也彌少
+> 亓出也彌遠 亓知也彌少
 
-是以聖人不行而知 不見而名 弗為而成
+> 是以聖人不行而知 不見而名 弗為而成
 
 ### 11-48
 
@@ -166,15 +166,15 @@
 
 *尊貴*
 
-道生之而德畜之 物形之而器成之
+> 道生之而德畜之 物形之而器成之
 
-是以萬物尊道而貴德
+> 是以萬物尊道而貴德
 
-道之尊也 德之貴也 夫莫之爵也 而恆自然也
+> 道之尊也 德之貴也 夫莫之爵也 而恆自然也
 
-道生之 畜之 長之 遂之 亭之 毒之 養之 覆之
+> 道生之 畜之 長之 遂之 亭之 毒之 養之 覆之
 
-生而弗有也 爲而弗恃也 長而弗宰也 此之謂玄德
+> 生而弗有也 爲而弗恃也 長而弗宰也 此之謂玄德
 
 ### 15-52
 
@@ -200,113 +200,113 @@
 
 *盜竽*
 
-使我挈有知也 行於大道 唯施是畏
+> 使我挈有知也 行於大道 唯施是畏
 
-大道甚夷 民甚好解
+> 大道甚夷 民甚好解
 
-朝甚除 田甚蕪 倉甚虛 服文采 帶利劍 厭食而齎財有餘 是謂盜竽 非道也
+> 朝甚除 田甚蕪 倉甚虛 服文采 帶利劍 厭食而齎財有餘 是謂盜竽 非道也
 
 ### 17-54
 
 *善觀*
 
-善建者不拔 善抱者不脫 子孫以祭祀不絕
+> 善建者不拔 善抱者不脫 子孫以祭祀不絕
 
-修之身 亓德乃真 修之家 亓德有餘 修之鄉 亓德乃長 修之邦 亓德乃豐 修之天下 亓德乃博
+> 修之身 亓德乃真 修之家 亓德有餘 修之鄉 亓德乃長 修之邦 亓德乃豐 修之天下 亓德乃博
 
-以身觀身 以家觀家 以鄉觀鄉 以邦觀邦 以天下觀天下
+> 以身觀身 以家觀家 以鄉觀鄉 以邦觀邦 以天下觀天下
 
-吾何以知天下然茲 以此
+> 吾何以知天下然茲 以此
 
 ### 18-55
 
 *含德*
 
-含德之厚者 比於赤子 蜂蠆虺蛇弗螫 攫鳥猛獸弗搏 骨弱筋柔而握固 未知牝牡之合而朘怒 精之至也 終日號而不嚘 和之至也
+> 含德之厚者 比於赤子 蜂蠆虺蛇弗螫 攫鳥猛獸弗搏 骨弱筋柔而握固 未知牝牡之合而朘怒 精之至也 終日號而不嚘 和之至也
 
-和曰常 知和曰明 益生曰祥 心使氣曰強
+> 和曰常 知和曰明 益生曰祥 心使氣曰強
 
-物壯即老 謂之不道 不道早已
+> 物壯即老 謂之不道 不道早已
 
 ### 19-56
 
 *玄同*
 
-知者弗言 言者弗知
+> 知者弗言 言者弗知
 
-塞亓兌 閉亓門 和亓光 同亓塵 挫亓銳 解亓紛 是謂玄同
+> 塞亓兌 閉亓門 和亓光 同亓塵 挫亓銳 解亓紛 是謂玄同
 
-故不可得而親 亦不可得而疏 不可得而利 亦不可得而害 不可得而貴 亦不可得而賤 故為天下貴
+> 故不可得而親 亦不可得而疏 不可得而利 亦不可得而害 不可得而貴 亦不可得而賤 故為天下貴
 
 ### 20-57
 
 *治邦*
 
-以正之邦 以畸用兵 以無事取天下 吾何以知亓然也
+> 以正之邦 以畸用兵 以無事取天下 吾何以知亓然也
 
-夫天下多忌諱 而民彌貧 民多利器 而邦滋昏 人多知 而奇物滋起 法物滋彰 而盜賊多有
+> 夫天下多忌諱 而民彌貧 民多利器 而邦滋昏 人多知 而奇物滋起 法物滋彰 而盜賊多有
 
-是以聖人之言曰 我無爲而民自化 我好靜而民自正 我無事而民自富 我欲不欲而民自樸
+> 是以聖人之言曰 我無爲而民自化 我好靜而民自正 我無事而民自富 我欲不欲而民自樸
 
 ### 21-58
 
 *爲正*
 
-亓正閔閔 亓民屯屯 亓正察察 亓邦夬夬
+> 亓正閔閔 亓民屯屯 亓正察察 亓邦夬夬
 
-禍 福之所倚 福 禍之所伏 孰知亓極
+> 禍 福之所倚 福 禍之所伏 孰知亓極
 
-亓無正也 正復爲奇 善復爲訞
+> 亓無正也 正復爲奇 善復爲訞
 
-人之迷也 亓日固久矣
+> 人之迷也 亓日固久矣
 
-是以方而不割 兼而不刺 直而不紲 光而不耀
+> 是以方而不割 兼而不刺 直而不紲 光而不耀
 
 ### 22-59
 
 *長生*
 
-治人事天 莫若嗇
+> 治人事天 莫若嗇
 
-夫唯嗇 是以蚤服 蚤服是謂重積德 重積德則無不克 無不克則莫知亓極 莫知亓極 可以有國 有國之母 可以長久
+> 夫唯嗇 是以蚤服 蚤服是謂重積德 重積德則無不克 無不克則莫知亓極 莫知亓極 可以有國 有國之母 可以長久
 
-是謂深根固柢 長生久視之道也
+> 是謂深根固柢 長生久視之道也
 
 ### 23-60
 
 *居位*
 
-治大國 若烹小鮮
+> 治大國 若烹小鮮
 
-以道蒞天下 亓鬼不神 非亓鬼不神也 亓神不傷人也 非亓神不傷人也 聖人亦弗傷也
+> 以道蒞天下 亓鬼不神 非亓鬼不神也 亓神不傷人也 非亓神不傷人也 聖人亦弗傷也
 
-夫兩不相傷 故德交歸焉
+> 夫兩不相傷 故德交歸焉
 
 ### 24-61
 
 *處下*
 
-大邦者 下流也 天下之牝 天下之交也
+> 大邦者 下流也 天下之牝 天下之交也
 
-牝恆以靚勝牡 爲亓靚也 故宜爲下
+> 牝恆以靚勝牡 爲亓靚也 故宜爲下
 
-大邦以下小邦 則取小邦 小邦以下大邦 則取於大邦 故或下以取 或下而取
+> 大邦以下小邦 則取小邦 小邦以下大邦 則取於大邦 故或下以取 或下而取
 
-故大邦者 不過欲兼畜人 小邦者 不過欲入事人
+> 故大邦者 不過欲兼畜人 小邦者 不過欲入事人
 
-夫皆得亓欲 則大者宜爲下
+> 夫皆得亓欲 則大者宜爲下
 
 ### 25-62
 
 *道注*
 
-道者 萬物之注也 善人之寳也 不善人之所保也 美言可以市 尊行可以賀人
+> 道者 萬物之注也 善人之寳也 不善人之所保也 美言可以市 尊行可以賀人
 
-人之不善 何棄之有
+> 人之不善 何棄之有
 
-故立天子 置三卿 雖有拱之璧以先四馬 不善坐 而進此
+> 故立天子 置三卿 雖有拱之璧以先四馬 不善坐 而進此
 
-古之所以貴此者何 不謂求以得 有罪以免與 故爲天下貴
+> 古之所以貴此者何 不謂求以得 有罪以免與 故爲天下貴
 
 ### 26-63
 
@@ -330,45 +330,45 @@
 
 *輔物*
 
-亓安也 易持也 亓未兆也 易謀也 亓脆也 易判也 亓微也 易散也 爲之於亓未有也 治之於亓未亂也
+> 亓安也 易持也 亓未兆也 易謀也 亓脆也 易判也 亓微也 易散也 爲之於亓未有也 治之於亓未亂也
 
-合抱之木 生於毫末 九成之臺 作於羸土 百仞之高 始於足下
+> 合抱之木 生於毫末 九成之臺 作於羸土 百仞之高 始於足下
 
-爲之者敗之 執之者失之 是以聖人無爲也 故無敗也 無執也 故無失也 民之從事也 恆於亓成而敗之 故慎終若始 則無敗事矣
+> 爲之者敗之 執之者失之 是以聖人無爲也 故無敗也 無執也 故無失也 民之從事也 恆於亓成而敗之 故慎終若始 則無敗事矣
 
-是以聖人欲不欲 而不貴難得之貨 學不學 而復眾人之所過 能輔萬物之自然 而弗敢爲
+> 是以聖人欲不欲 而不貴難得之貨 學不學 而復眾人之所過 能輔萬物之自然 而弗敢爲
 
 ### 28-65
 
 *玄德*
 
-故曰 爲道者非以明民也 將以愚之也 民之難治也 以亓知也
+> 故曰 爲道者非以明民也 將以愚之也 民之難治也 以亓知也
 
-故以知知邦 邦之賊也 以不知知邦 邦之德也
+> 故以知知邦 邦之賊也 以不知知邦 邦之德也
 
-恆知此兩者 亦稽式也 恆知稽式 此謂玄德
+> 恆知此兩者 亦稽式也 恆知稽式 此謂玄德
 
-玄德深矣 遠矣 與物反矣 乃至大順
+> 玄德深矣 遠矣 與物反矣 乃至大順
 
 ### 29-66
 
 *江海*
 
-江海所以能爲百浴王者 以亓善下之 是以能爲百浴王
+> 江海所以能爲百浴王者 以亓善下之 是以能爲百浴王
 
-是以聖人之欲上民也 必以亓言下之 欲先民也 必以亓身後之 故居前而民弗害也 居上而民弗重也 天下樂推而弗猒也 非以亓無諍與 故天下莫能與諍
+> 是以聖人之欲上民也 必以亓言下之 欲先民也 必以亓身後之 故居前而民弗害也 居上而民弗重也 天下樂推而弗猒也 非以亓無諍與 故天下莫能與諍
 
 ### 30-80
 
 *安居*
 
-小邦寡民
+> 小邦寡民
 
-使十百人之器毋用 使民重死而遠徙 有車周無所乘之 有甲兵無所陳之 使民復結繩而用之
+> 使十百人之器毋用 使民重死而遠徙 有車周無所乘之 有甲兵無所陳之 使民復結繩而用之
 
-甘亓食 美亓服 樂亓俗 安亓居
+> 甘亓食 美亓服 樂亓俗 安亓居
 
-鄰邦相望 雞狗之聲相聞 民至老死 不相往來
+> 鄰邦相望 雞狗之聲相聞 民至老死 不相往來
 
 ### 31-81
 
@@ -386,15 +386,15 @@
 
 *三寶*
 
-天下皆謂我大 不宵 夫唯大 故不宵 若宵 細久矣
+> 天下皆謂我大 不宵 夫唯大 故不宵 若宵 細久矣
 
-我恆有三寶之 一曰茲 二曰檢 三曰不敢爲天下先
+> 我恆有三寶之 一曰茲 二曰檢 三曰不敢爲天下先
 
-夫茲 故能勇 檢 故能廣 不敢爲天下先 故能爲成事長
+> 夫茲 故能勇 檢 故能廣 不敢爲天下先 故能爲成事長
 
-今捨亓茲且勇 捨亓檢且廣 捨亓後且先 則必死矣
+> 今捨亓茲且勇 捨亓檢且廣 捨亓後且先 則必死矣
 
-夫茲 以戰則勝 以守則固 天將建之 如以茲垣之
+> 夫茲 以戰則勝 以守則固 天將建之 如以茲垣之
 
 ### 33-68
 
@@ -412,13 +412,13 @@
 
 *用兵*
 
-用兵有言曰 吾不敢爲主而爲客 不敢進寸而芮尺
+> 用兵有言曰 吾不敢爲主而爲客 不敢進寸而芮尺
 
-是謂行無行 攘無臂 執無兵 乃無敵矣
+> 是謂行無行 攘無臂 執無兵 乃無敵矣
 
-禍莫大於無適 無適近亡吾寶矣
+> 禍莫大於無適 無適近亡吾寶矣
 
-故稱兵相若 則哀者勝矣
+> 故稱兵相若 則哀者勝矣
 
 ### 35-70
 
@@ -436,19 +436,19 @@
 
 *知病*
 
-知不知 尚矣 不知不知 病矣
+> 知不知 尚矣 不知不知 病矣
 
-是以聖人之不病 以亓病病也 是以不病
+> 是以聖人之不病 以亓病病也 是以不病
 
 ### 37-72
 
 *畏畏*
 
-民之不畏畏 則大畏將至矣
+> 民之不畏畏 則大畏將至矣
 
-毋閘亓所居 毋猒亓所生 夫唯弗猒 是以不猒
+> 毋閘亓所居 毋猒亓所生 夫唯弗猒 是以不猒
 
-是以聖人 自知而不自見也 自愛而不自貴也 故去彼取此
+> 是以聖人 自知而不自見也 自愛而不自貴也 故去彼取此
 
 ### 38-73
 
@@ -468,61 +468,61 @@
 
 *司殺*
 
-若民恆且不畏死 奈何以殺懼之也
+> 若民恆且不畏死 奈何以殺懼之也
 
-若民恆是畏死 則而為者 吾得而殺之 夫孰敢矣
+> 若民恆是畏死 則而為者 吾得而殺之 夫孰敢矣
 
-若民恆且必畏死 則恆有司殺者
+> 若民恆且必畏死 則恆有司殺者
 
-夫代司殺者殺 是代大匠斵也 夫代大匠斵者 則希不傷亓手矣
+> 夫代司殺者殺 是代大匠斵也 夫代大匠斵者 則希不傷亓手矣
 
 ### 40-75
 
 *貴生*
 
-人之饑也 以亓取食稅之多也 是以飢
+> 人之饑也 以亓取食稅之多也 是以飢
 
-百姓之不治也 以亓上有以爲也 是以不治
+> 百姓之不治也 以亓上有以爲也 是以不治
 
-民之輕死 以亓求生之厚也 是以輕死
+> 民之輕死 以亓求生之厚也 是以輕死
 
-夫唯無以生爲者 是賢貴生
+> 夫唯無以生爲者 是賢貴生
 
 ### 41-76
 
 *柔弱*
 
-人之生也柔弱 亓死也恆仞堅強 萬物草木之生也柔脆 亓死也枯槁
+> 人之生也柔弱 亓死也恆仞堅強 萬物草木之生也柔脆 亓死也枯槁
 
-故曰 堅強者 死之徒也 柔弱微細 生之徒也
+> 故曰 堅強者 死之徒也 柔弱微細 生之徒也
 
-兵強則不勝 木強則恆
+> 兵強則不勝 木強則恆
 
-強大居下 柔弱微細居上
+> 強大居下 柔弱微細居上
 
 ### 42-77
 
 *天道*
 
-天下之道 猶張弓者也 高者抑之 下者舉之 有餘者損之 不足者補之
+> 天下之道 猶張弓者也 高者抑之 下者舉之 有餘者損之 不足者補之
 
-故天之道 損有餘而益不足 人之道 損不足而奉有餘
+> 故天之道 損有餘而益不足 人之道 損不足而奉有餘
 
-孰能有餘而有以取奉於天者 唯有道者乎
+> 孰能有餘而有以取奉於天者 唯有道者乎
 
-是以聖人爲而弗有 成功而弗居也 若此 亓不欲見賢也
+> 是以聖人爲而弗有 成功而弗居也 若此 亓不欲見賢也
 
 ### 43-78
 
 *水德*
 
-天下莫柔弱於水 而攻堅強者莫之能先也 以亓無以易之
+> 天下莫柔弱於水 而攻堅強者莫之能先也 以亓無以易之
 
-水之勝剛 弱之勝強 天下莫弗知 而莫能行也
+> 水之勝剛 弱之勝強 天下莫弗知 而莫能行也
 
-故聖人之言云 曰受邦之詬 是謂社稷之主 受邦之不祥 是謂天下之王
+> 故聖人之言云 曰受邦之詬 是謂社稷之主 受邦之不祥 是謂天下之王
 
-正言若反
+> 正言若反
 
 ### 44-79
 
@@ -544,17 +544,17 @@
 
 *觀道*
 
-道可道也 非恆道也
+> 道可道也 非恆道也
 
-名可名也 非恆名也
+> 名可名也 非恆名也
 
-無名萬物之始也
+> 無名萬物之始也
 
-有名萬物之母也
+> 有名萬物之母也
 
-故恆無欲也 以觀亓眇 恆有欲也 以觀亓所徼
+> 故恆無欲也 以觀亓眇 恆有欲也 以觀亓所徼
 
-兩者同出 異名同謂 玄之又玄 眾眇之門
+> 兩者同出 異名同謂 玄之又玄 眾眇之門
 
 
 ### 46-2
@@ -575,41 +575,41 @@
 
 *安民*
 
-不上賢 使民不爭 不貴難得之貨 使民不爲盜 不見可欲 使民不亂
+> 不上賢 使民不爭 不貴難得之貨 使民不爲盜 不見可欲 使民不亂
 
-是以聖人之治也 虛亓心 實亓腹 弱亓志 強亓骨
+> 是以聖人之治也 虛亓心 實亓腹 弱亓志 強亓骨
 
-恆使民無知無欲也 使夫知不敢 弗爲而已 則無不治矣
+> 恆使民無知無欲也 使夫知不敢 弗爲而已 則無不治矣
 
 ### 48-4
 
 *道用*
 
-道沖 而用之有弗盈也 潚呵 始萬物之宗
+> 道沖 而用之有弗盈也 潚呵 始萬物之宗
 
-銼亓兌 解亓紛 和亓光 同亓塵
+> 銼亓兌 解亓紛 和亓光 同亓塵
 
-湛呵 似或存 吾不知誰子也 象帝之先
+> 湛呵 似或存 吾不知誰子也 象帝之先
 
 ### 49-5
 
 *用中*
 
-天地不仁 以萬物爲芻狗 聖人不仁 以百姓爲芻狗
+> 天地不仁 以萬物爲芻狗 聖人不仁 以百姓爲芻狗
 
-天地之間 亓猶橐籥與 虛而不淈 動而俞出
+> 天地之間 亓猶橐籥與 虛而不淈 動而俞出
 
-多聞數窮 不若守於中
+> 多聞數窮 不若守於中
 
 ### 50-6
 
 *浴神*
 
-浴神不死 是謂玄牝
+> 浴神不死 是謂玄牝
 
-玄牝之門 是謂天地之根
+> 玄牝之門 是謂天地之根
 
-綿綿呵若存 用之不堇
+> 綿綿呵若存 用之不堇
 
 ### 51-7
 
@@ -675,21 +675,21 @@
 
 *玄中*
 
-卅輻同一轂 當亓無 有車之用也
+> 卅輻同一轂 當亓無 有車之用也
 
-埏埴爲器 當亓無 有埴器之用也
+> 埏埴爲器 當亓無 有埴器之用也
 
-鑿戶牖 當亓無 有室之用也
+> 鑿戶牖 當亓無 有室之用也
 
-故有之以爲利 無之以爲用
+> 故有之以爲利 無之以爲用
 
 ### 56-12
 
 *爲腹*
 
-五色使人目盲 馳騁田臘使人心發狂 難得之貨使人之行妨 五味使人之口爽 五音使人之耳聾
+> 五色使人目盲 馳騁田臘使人心發狂 難得之貨使人之行妨 五味使人之口爽 五音使人之耳聾
 
-是以聖人之治也 爲腹不爲目 故去彼取此
+> 是以聖人之治也 爲腹不爲目 故去彼取此
 
 ### 57-13
 
@@ -709,93 +709,93 @@
 
 *道紀*
 
-視之而弗見 名之曰微 聽之而弗聞 名之曰希 捪之而弗得 名之曰夷 三者不可至計 故混而爲一
+> 視之而弗見 名之曰微 聽之而弗聞 名之曰希 捪之而弗得 名之曰夷 三者不可至計 故混而爲一
 
-一者 亓上不攸 亓下不忽 尋尋呵 不可名也 復歸於無物
+> 一者 亓上不攸 亓下不忽 尋尋呵 不可名也 復歸於無物
 
-是謂無狀之狀 無物之象 是謂惚恍 隨而不見亓後 迎而不見亓首
+> 是謂無狀之狀 無物之象 是謂惚恍 隨而不見亓後 迎而不見亓首
 
-執今之道 以御今之有 以知古始 是謂道紀
+> 執今之道 以御今之有 以知古始 是謂道紀
 
 ### 59-15
 
 *不盈*
 
-古之善爲道者 微眇玄達 深不可志 夫唯不可志 故強爲之容 曰
+> 古之善爲道者 微眇玄達 深不可志 夫唯不可志 故強爲之容 曰
 
-與呵亓若冬涉水 猶呵亓若畏四鄰 儼呵亓若客 渙呵亓若淩澤 沌呵亓若樸 湷呵亓若濁 莊呵亓若浴
+> 與呵亓若冬涉水 猶呵亓若畏四鄰 儼呵亓若客 渙呵亓若淩澤 沌呵亓若樸 湷呵亓若濁 莊呵亓若浴
 
-濁而情之余清 安以重之余生
+> 濁而情之余清 安以重之余生
 
-葆此道不欲盈 夫唯不欲盈 是以能敝而不成
+> 葆此道不欲盈 夫唯不欲盈 是以能敝而不成
 
 ### 60-16
 
 *歸根*
 
-至虛極也 守情表也 萬物旁作 吾以觀亓復也
+> 至虛極也 守情表也 萬物旁作 吾以觀亓復也
 
-天物雲雲 各復歸於亓根 曰靜 靜是謂復命 復命常也 知常明也
+> 天物雲雲 各復歸於亓根 曰靜 靜是謂復命 復命常也 知常明也
 
-不知常 㠵㠵作兇
+> 不知常 㠵㠵作兇
 
-知常容 容乃公 公乃王 王乃天 天乃道 道乃久 歿身不殆
+> 知常容 容乃公 公乃王 王乃天 天乃道 道乃久 歿身不殆
 
 ### 61-17
 
 *知有*
 
-太上 下知有之 亓次親譽之 亓次畏之 亓下侮之
+> 太上 下知有之 亓次親譽之 亓次畏之 亓下侮之
 
-信不足 案有不信 猶呵 亓貴言也
+> 信不足 案有不信 猶呵 亓貴言也
 
-成功遂事 而百姓謂我自然
+> 成功遂事 而百姓謂我自然
 
 ### 62-18
 
 *四有*
 
-故大道廢 安有仁義
+> 故大道廢 安有仁義
 
-知慧出 安有大僞
+> 知慧出 安有大僞
 
-六親不和 安有孝茲
+> 六親不和 安有孝茲
 
-邦家昏亂 安有正臣
+> 邦家昏亂 安有正臣
 
 ### 63-19
 
 *樸素*
 
-絕知棄辯 民利百倍
+> 絕知棄辯 民利百倍
 
-絕僞棄慮 民復孝茲
+> 絕僞棄慮 民復孝茲
 
-絕巧棄利 盜賊無有
+> 絕巧棄利 盜賊無有
 
-此三言也 以爲文未足 故令之有所屬
+> 此三言也 以爲文未足 故令之有所屬
 
-見素抱樸 少私寡欲 絕學無憂
+> 見素抱樸 少私寡欲 絕學無憂
 
 ### 64-20
 
 *食母*
 
-唯與訶 亓相去幾何 美與惡 亓相去何若
+> 唯與訶 亓相去幾何 美與惡 亓相去何若
 
-人之所畏 亦不可以不畏人
+> 人之所畏 亦不可以不畏人
 
-朢呵 亓未央哉
+> 朢呵 亓未央哉
 
-眾人巸巸 若鄉於大牢 而春登臺
+> 眾人巸巸 若鄉於大牢 而春登臺
 
-我泊焉未兆 若嬰兒未咳 纍呵 似無所歸
+> 我泊焉未兆 若嬰兒未咳 纍呵 似無所歸
 
-眾人皆有餘 我獨遺 我愚人之心也 湷湷呵 鬻人昭昭 我獨呵 鬻人蔡蔡 我獨悶悶呵
+> 眾人皆有餘 我獨遺 我愚人之心也 湷湷呵 鬻人昭昭 我獨呵 鬻人蔡蔡 我獨悶悶呵
 
-忽呵 亓若海 朢呵 亓若無所止
+> 忽呵 亓若海 朢呵 亓若無所止
 
-眾人皆有以 我獨頑以悝 吾欲獨異於人 而貴食母
+> 眾人皆有以 我獨頑以悝 吾欲獨異於人 而貴食母
 
 ### 65-21
 
@@ -815,23 +815,23 @@
 
 *弗居*
 
-炊者不立 自視者不彰 自見者不明 自伐者無功 自矜者不長
+> 炊者不立 自視者不彰 自見者不明 自伐者無功 自矜者不長
 
-亓在道也 曰餘食贅行 物或惡之 故有欲者弗居
+> 亓在道也 曰餘食贅行 物或惡之 故有欲者弗居
 
 ### 67-22
 
 *執一*
 
-曲則全 枉則正 洼則盈 敝則新 少則得 多則惑
+> 曲則全 枉則正 洼則盈 敝則新 少則得 多則惑
 
-是以聖人執一以爲天下牧
+> 是以聖人執一以爲天下牧
 
-不自視故明 不自見故彰 不自伐故有功 弗矜故能長
+> 不自視故明 不自見故彰 不自伐故有功 弗矜故能長
 
-夫唯不爭 故莫能與之爭
+> 夫唯不爭 故莫能與之爭
 
-古之所謂曲全者 幾語才 誠全歸之
+> 古之所謂曲全者 幾語才 誠全歸之
 
 ### 68-23
 
@@ -853,57 +853,57 @@
 
 *昆成*
 
-有物昆成 先天地生
+> 有物昆成 先天地生
 
-繡呵繆呵 獨立而不改 可以爲天地母
+> 繡呵繆呵 獨立而不改 可以爲天地母
 
-吾未知亓名 字之曰道 吾強爲之名曰大
+> 吾未知亓名 字之曰道 吾強爲之名曰大
 
-大曰筮 筮曰遠 遠曰反
+> 大曰筮 筮曰遠 遠曰反
 
-道大 天大 地大 王亦大
+> 道大 天大 地大 王亦大
 
-國中有四大 而王居一焉
+> 國中有四大 而王居一焉
 
-人法地 地法天 天法道 道法自然
+> 人法地 地法天 天法道 道法自然
 
 ### 70-26
 
 *輜重*
 
-重爲巠根 清爲趮君
+> 重爲巠根 清爲趮君
 
-是以君子眾日行 不離亓甾重
+> 是以君子眾日行 不離亓甾重
 
-唯有環官 燕處則昭
+> 唯有環官 燕處則昭
 
-若若何萬乘之王 而以身巠於天下
+> 若若何萬乘之王 而以身巠於天下
 
-巠則失本 趮則失君
+> 巠則失本 趮則失君
 
 ### 71-27
 
 *曳明*
 
-善行者無轍迹 善言者無瑕適 善數者不用檮策 善閉者無關籥而不可啟也 善結者無纆約而不可解也
+> 善行者無轍迹 善言者無瑕適 善數者不用檮策 善閉者無關籥而不可啟也 善結者無纆約而不可解也
 
-是以聖人恆善救人 而無棄人 物無棄財 是謂曳明
+> 是以聖人恆善救人 而無棄人 物無棄財 是謂曳明
 
-故善人 善人之師 不善人 善人之齎也
+> 故善人 善人之師 不善人 善人之齎也
 
-不貴亓師 不愛亓齎 唯知乎大眯 是謂眇要
+> 不貴亓師 不愛亓齎 唯知乎大眯 是謂眇要
 
 ### 72-28
 
 *恆德*
 
-知亓雄 守亓雌 爲天下溪 爲天下溪 恆德不離 恆德不離 復歸嬰兒
+> 知亓雄 守亓雌 爲天下溪 爲天下溪 恆德不離 恆德不離 復歸嬰兒
 
-知亓白 守亓辱 爲天下浴 爲天下浴 恆德乃足 德乃足 復歸於樸
+> 知亓白 守亓辱 爲天下浴 爲天下浴 恆德乃足 德乃足 復歸於樸
 
-知亓白 守亓黑 爲天下式 爲天下式 恆德不忒 恆德不忒 復歸於無極
+> 知亓白 守亓黑 爲天下式 爲天下式 恆德不忒 恆德不忒 復歸於無極
 
-樸散則爲器 聖人用則爲官長 夫大制無割
+> 樸散則爲器 聖人用則爲官長 夫大制無割
 
 ### 73-29
 
@@ -925,107 +925,107 @@
 
 *不強*
 
-以道佐人主 不以兵強於天下 亓事好還
+> 以道佐人主 不以兵強於天下 亓事好還
 
-師之所居 楚棘生之
+> 師之所居 楚棘生之
 
-善者果而已矣 毋以取強焉
+> 善者果而已矣 毋以取強焉
 
-果而毋驕 果而勿矜 果而勿伐 果而毋得已居 是謂果而不強
+> 果而毋驕 果而勿矜 果而勿伐 果而毋得已居 是謂果而不強
 
-物壯而老 是謂之不道 不道蚤已
+> 物壯而老 是謂之不道 不道蚤已
 
 ### 75-31
 
 *貴左*
 
-夫兵者 不祥之器也 物或惡之 故有欲者弗居
+> 夫兵者 不祥之器也 物或惡之 故有欲者弗居
 
-君子居則貴左 用兵則貴右
+> 君子居則貴左 用兵則貴右
 
-故兵者 非君子之器也 兵者 不祥之器也 不得已而用之 銛龐爲上
+> 故兵者 非君子之器也 兵者 不祥之器也 不得已而用之 銛龐爲上
 
-勿美也 若美之 是樂殺人也
+> 勿美也 若美之 是樂殺人也
 
-夫樂殺人 不可以得志於天下矣
+> 夫樂殺人 不可以得志於天下矣
 
-是以吉事上左 喪事上右
+> 是以吉事上左 喪事上右
 
-是以偏將軍居左 上將軍居右 言以喪禮居之也
+> 是以偏將軍居左 上將軍居右 言以喪禮居之也
 
-殺人眾 以悲依立之 戰勝 以喪禮處之
+> 殺人眾 以悲依立之 戰勝 以喪禮處之
 
 ### 76-32
 
 *知止*
 
-道恆無名
+> 道恆無名
 
-楃唯小 而天下弗敢臣
+> 楃唯小 而天下弗敢臣
 
-侯王若能守之 萬物將自賓 天地相合 以俞甘洛 民莫之令而自均焉
+> 侯王若能守之 萬物將自賓 天地相合 以俞甘洛 民莫之令而自均焉
 
-始制有名 名亦既有 夫亦將知止 知止所以不殆
+> 始制有名 名亦既有 夫亦將知止 知止所以不殆
 
-俾道之在天下也 猶小浴之與江海也
+> 俾道之在天下也 猶小浴之與江海也
 
 ### 77-33
 
 *盡己*
 
-知人者 知也 自知者 明也
+> 知人者 知也 自知者 明也
 
-勝人者 有力也 自勝者 強也
+> 勝人者 有力也 自勝者 強也
 
-知足者 富也 強行者 有志也
+> 知足者 富也 強行者 有志也
 
-不失亓所者 久也 死不忘者 壽也
+> 不失亓所者 久也 死不忘者 壽也
 
 ### 78-34
 
 *成大*
 
-道渢呵 亓可左右也
+> 道渢呵 亓可左右也
 
-成功遂事 而弗名有也 萬物歸焉而弗爲主
+> 成功遂事 而弗名有也 萬物歸焉而弗爲主
 
-則恆無欲也 可名於小 萬物歸焉而弗爲主 可名於大
+> 則恆無欲也 可名於小 萬物歸焉而弗爲主 可名於大
 
-是以聖人之能成大也 以亓不爲大也 故能成大
+> 是以聖人之能成大也 以亓不爲大也 故能成大
 
 ### 79-35
 
 *大象*
 
-執大象 天下往 往而不害 安平大
+> 執大象 天下往 往而不害 安平大
 
-樂與餌 過格止
+> 樂與餌 過格止
 
-故道之出言也 曰淡呵亓無味也 視之不足見也 聽之不足聞也 用之不可既也
+> 故道之出言也 曰淡呵亓無味也 視之不足見也 聽之不足聞也 用之不可既也
 
 ### 80-36
 
 *微明*
 
-將欲翕之 必固張之 將欲弱之 必固強之 將欲去之 必固與之 將欲奪之 必固予之 是謂微明
+> 將欲翕之 必固張之 將欲弱之 必固強之 將欲去之 必固與之 將欲奪之 必固予之 是謂微明
 
-柔弱勝強
+> 柔弱勝強
 
-魚不可脫於淵 邦利器不可以示人
+> 魚不可脫於淵 邦利器不可以示人
 
 ### 81-37
 
 *無名*
 
-道恆無名
+> 道恆無名
 
-侯王若守之 萬物將自化
+> 侯王若守之 萬物將自化
 
-化而欲作 吾將貞之以無名之樸
+> 化而欲作 吾將貞之以無名之樸
 
-貞之以無名之樸 夫將不辱
+> 貞之以無名之樸 夫將不辱
 
-不辱以靜 天地將自正
+> 不辱以靜 天地將自正
 
 
 
