--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -729,27 +729,27 @@
 
 > 葆此道不欲盈 夫唯不欲盈 是以能敝而不成
 
-### 60-16
+### <del>60-16</del>
 
-*歸根*
+*<del>歸根</del>*
 
-> 至虛極也 守情表也 萬物旁作 吾以觀亓復也
+> <del>至虛極也 守情表也 萬物旁作 吾以觀亓復也</del>
 
-> 天物雲雲 各復歸於亓根 曰靜 靜是謂復命 復命常也 知常明也
+> <del>天物雲雲 各復歸於亓根 曰靜 靜是謂復命 復命常也 知常明也</del>
 
-> 不知常 㠵㠵作兇
+> <del>不知常 㠵㠵作兇</del>
 
-> 知常容 容乃公 公乃王 王乃天 天乃道 道乃久 歿身不殆
+> <del>知常容 容乃公 公乃王 王乃天 天乃道 道乃久 歿身不殆</del>
 
-### 61-17
+### <del>61-17</del>
 
-*知有*
+*<del>知有</del>*
 
-> 太上 下知有之 亓次親譽之 亓次畏之 亓下侮之
+> <del>太上 下知有之 亓次親譽之 亓次畏之 亓下侮之</del>
 
-> 信不足 案有不信 猶呵 亓貴言也
+> <del>信不足 案有不信 猶呵 亓貴言也</del>
 
-> 成功遂事 而百姓謂我自然
+> <del>成功遂事 而百姓謂我自然</del>
 
 ### 62-18
 
