对篇章标题以标题格式替代斜体
篇章标题不重要，因为是后人自己加上去的，不是原作中有的。因此，存在于文中只是为了方便读者查询。

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -4,7 +4,7 @@
 
 ### 1-38
 
-*論德*
+#### 論德
 
 > 上德不德 是以有德 下德不失德 是以無德
 
@@ -20,7 +20,7 @@
 
 ### 2-39
 
-*得一*
+#### 得一
 
 > 昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以為天下正
 
@@ -34,7 +34,7 @@
 
 ### 3-41
 
-*聞道*
+#### 聞道
 
 > 上士聞道 堇而行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
 
@@ -46,7 +46,7 @@
 
 ### 4-40
 
-*反復*
+#### 反復
 
 > 反也者 道之動也 弱也者 道之用也
 
@@ -54,7 +54,7 @@
 
 ### 5-42
 
-*中和*
+#### 中和
 
 > 道生一 一生二 二生三 三生萬物
 
@@ -68,7 +68,7 @@
 
 ### 6-43
 
-*至柔*
+#### 至柔
 
 > 天下之至柔 馳騁於天下之致堅
 
@@ -80,7 +80,7 @@
 
 ### 7-44
 
-*立戒*
+#### 立戒
 
 > 名與身孰親 身與貨孰多 得與亡孰病
 
@@ -92,7 +92,7 @@
 
 ### 8-45
 
-*請靚*
+#### 請靚
 
 > 大成若缺 亓用不幣 大盈若沖 亓用不窮 大直如詘 大巧如拙 大贏如㶧
 
@@ -100,7 +100,7 @@
 
 ### 9-46
 
-*知足*
+#### 知足
 
 > 天下有道 卻走馬以糞 天下無道 戎馬生於郊
 
@@ -112,7 +112,7 @@
 
 ### 10-47
 
-*知天下*
+#### 知天下
 
 > 不出於戶 以知天下 不窺於牖 以知天道
 
@@ -122,7 +122,7 @@
 
 ### 11-48
 
-*無爲*
+#### 無爲
 
 > 爲學者日益 聞道者日損 損之又損 以至於無爲 無爲而無不爲
 
@@ -132,7 +132,7 @@
 
 ### 12-49
 
-*德善*
+#### 德善
 
 > 聖人恆無心 以百姓之心為心
 
@@ -148,7 +148,7 @@
 
 ### 13-50
 
-*生死*
+#### 生死
 
 > 出生 入死
 
@@ -164,7 +164,7 @@
 
 ### 14-51
 
-*尊貴*
+#### 尊貴
 
 > 道生之而德畜之 物形之而器成之
 
@@ -178,7 +178,7 @@
 
 ### 15-52
 
-*守母*
+#### 守母
 
 > 天下有始 以爲天下母
 
@@ -198,7 +198,7 @@
 
 ### 16-53
 
-*盜竽*
+#### 盜竽
 
 > 使我挈有知也 行於大道 唯施是畏
 
@@ -208,7 +208,7 @@
 
 ### 17-54
 
-*善觀*
+#### 善觀
 
 > 善建者不拔 善抱者不脫 子孫以祭祀不絕
 
@@ -220,7 +220,7 @@
 
 ### 18-55
 
-*含德*
+#### 含德
 
 > 含德之厚者 比於赤子 蜂蠆虺蛇弗螫 攫鳥猛獸弗搏 骨弱筋柔而握固 未知牝牡之合而朘怒 精之至也 終日號而不嚘 和之至也
 
@@ -230,7 +230,7 @@
 
 ### 19-56
 
-*玄同*
+#### 玄同
 
 > 知者弗言 言者弗知
 
@@ -240,7 +240,7 @@
 
 ### 20-57
 
-*治邦*
+#### 治邦
 
 > 以正之邦 以畸用兵 以無事取天下 吾何以知亓然也
 
@@ -250,7 +250,7 @@
 
 ### 21-58
 
-*爲正*
+#### 爲正
 
 > 亓正閔閔 亓民屯屯 亓正察察 亓邦夬夬
 
@@ -264,7 +264,7 @@
 
 ### 22-59
 
-*長生*
+#### 長生
 
 > 治人事天 莫若嗇
 
@@ -274,7 +274,7 @@
 
 ### 23-60
 
-*居位*
+#### 居位
 
 > 治大國 若烹小鮮
 
@@ -284,7 +284,7 @@
 
 ### 24-61
 
-*處下*
+#### 處下
 
 > 大邦者 下流也 天下之牝 天下之交也
 
@@ -298,7 +298,7 @@
 
 ### 25-62
 
-*道注*
+#### 道注
 
 > 道者 萬物之注也 善人之寳也 不善人之所保也 美言可以市 尊行可以賀人
 
@@ -310,7 +310,7 @@
 
 ### 26-63
 
-*無難*
+#### 無難
 
 > 爲無爲 事無事 味無味
 
@@ -328,7 +328,7 @@
 
 ### 27-64
 
-*輔物*
+#### 輔物
 
 > 亓安也 易持也 亓未兆也 易謀也 亓脆也 易判也 亓微也 易散也 爲之於亓未有也 治之於亓未亂也
 
@@ -340,7 +340,7 @@
 
 ### 28-65
 
-*玄德*
+#### 玄德
 
 > 故曰 爲道者非以明民也 將以愚之也 民之難治也 以亓知也
 
@@ -352,7 +352,7 @@
 
 ### 29-66
 
-*江海*
+#### 江海
 
 > 江海所以能爲百浴王者 以亓善下之 是以能爲百浴王
 
@@ -360,7 +360,7 @@
 
 ### 30-80
 
-*安居*
+#### 安居
 
 > 小邦寡民
 
@@ -372,7 +372,7 @@
 
 ### 31-81
 
-*不積*
+#### 不積
 
 > 信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
 
@@ -384,7 +384,7 @@
 
 ### 32-67
 
-*三寶*
+#### 三寶
 
 > 天下皆謂我大 不宵 夫唯大 故不宵 若宵 細久矣
 
@@ -398,7 +398,7 @@
 
 ### 33-68
 
-*不爭*
+#### 不爭
 
 > 善爲士者不武 善戰者不怒 善勝敵者弗與 善用人者爲之下
 
@@ -410,7 +410,7 @@
 
 ### 34-69
 
-*用兵*
+#### 用兵
 
 > 用兵有言曰 吾不敢爲主而爲客 不敢進寸而芮尺
 
@@ -422,7 +422,7 @@
 
 ### 35-70
 
-*懷玉*
+#### 懷玉
 
 > 吾言甚易知也 甚易行也 而人莫之能知也 而莫之能行也
 
@@ -434,7 +434,7 @@
 
 ### 36-71
 
-*知病*
+#### 知病
 
 > 知不知 尚矣 不知不知 病矣
 
@@ -442,7 +442,7 @@
 
 ### 37-72
 
-*畏畏*
+#### 畏畏
 
 > 民之不畏畏 則大畏將至矣
 
@@ -452,7 +452,7 @@
 
 ### 38-73
 
-*天網*
+#### 天網
 
 > 勇於敢者則殺 勇於不敢者則栝 此兩者或利或害
 
@@ -466,7 +466,7 @@
 
 ### 39-74
 
-*司殺*
+#### 司殺
 
 > 若民恆且不畏死 奈何以殺懼之也
 
@@ -478,7 +478,7 @@
 
 ### 40-75
 
-*貴生*
+#### 貴生
 
 > 人之饑也 以亓取食稅之多也 是以飢
 
@@ -490,7 +490,7 @@
 
 ### 41-76
 
-*柔弱*
+#### 柔弱
 
 > 人之生也柔弱 亓死也恆仞堅強 萬物草木之生也柔脆 亓死也枯槁
 
@@ -502,7 +502,7 @@
 
 ### 42-77
 
-*天道*
+#### 天道
 
 > 天下之道 猶張弓者也 高者抑之 下者舉之 有餘者損之 不足者補之
 
@@ -514,7 +514,7 @@
 
 ### 43-78
 
-*水德*
+#### 水德
 
 > 天下莫柔弱於水 而攻堅強者莫之能先也 以亓無以易之
 
@@ -526,7 +526,7 @@
 
 ### 44-79
 
-*右介*
+#### 右介
 
 > 和大怨 必有餘怨 焉可以爲善
 
@@ -542,7 +542,7 @@
 
 ### 45-1
 
-*觀道*
+#### 觀道
 
 > 道可道也 非恆道也
 
@@ -559,7 +559,7 @@
 
 ### 46-2
 
-*觀徼*
+#### 觀徼
 
 > 天下皆知美爲美 惡已 皆知善 訾不善矣
 
@@ -573,7 +573,7 @@
 
 ### 47-3
 
-*安民*
+#### 安民
 
 > 不上賢 使民不爭 不貴難得之貨 使民不爲盜 不見可欲 使民不亂
 
@@ -583,7 +583,7 @@
 
 ### 48-4
 
-*道用*
+#### 道用
 
 > 道沖 而用之有弗盈也 潚呵 始萬物之宗
 
@@ -593,7 +593,7 @@
 
 ### 49-5
 
-*用中*
+#### 用中
 
 > 天地不仁 以萬物爲芻狗 聖人不仁 以百姓爲芻狗
 
@@ -603,7 +603,7 @@
 
 ### 50-6
 
-*浴神*
+#### 浴神
 
 > 浴神不死 是謂玄牝
 
@@ -613,7 +613,7 @@
 
 ### 51-7
 
-*無私*
+#### 無私
 
 > 天長地久 天地之所以能長且久者 以亓不自生也 故能長生
 
@@ -625,7 +625,7 @@
 
 ### 52-8
 
-*治水*
+#### 治水
 
 > 上善治水 水善利萬物而有靜 居眾之所惡 故幾於道矣
 
@@ -637,7 +637,7 @@
 
 ### 53-9
 
-*持盈*
+#### 持盈
 
 > 植而盈之 不若亓已
 
@@ -659,7 +659,7 @@
 
 ### 54-10
 
-*無不爲*
+#### 無不爲
 
 > 戴營魄抱一 能毋離乎 摶氣至柔 能嬰兒乎
 
@@ -673,7 +673,7 @@
 
 ### 55-11
 
-*玄中*
+#### 玄中
 
 > 卅輻同一轂 當亓無 有車之用也
 
@@ -685,7 +685,7 @@
 
 ### 56-12
 
-*爲腹*
+#### 爲腹
 
 > 五色使人目盲 馳騁田臘使人心發狂 難得之貨使人之行妨 五味使人之口爽 五音使人之耳聾
 
@@ -693,7 +693,7 @@
 
 ### 57-13
 
-*寵辱*
+#### 寵辱
 
 > 寵辱若驚 貴大患若身
 
@@ -707,7 +707,7 @@
 
 ### 58-14
 
-*道紀*
+#### 道紀
 
 > 視之而弗見 名之曰微 聽之而弗聞 名之曰希 捪之而弗得 名之曰夷 三者不可至計 故混而爲一
 
@@ -719,7 +719,7 @@
 
 ### 59-15
 
-*不盈*
+#### 不盈
 
 > 古之善爲道者 微眇玄達 深不可志 夫唯不可志 故強爲之容 曰
 
@@ -731,7 +731,7 @@
 
 ### <del>60-16</del>
 
-*<del>歸根</del>*
+#### <del>歸根</del>
 
 > <del>至虛極也 守情表也 萬物旁作 吾以觀亓復也</del>
 
@@ -743,7 +743,7 @@
 
 ### <del>61-17</del>
 
-*<del>知有</del>*
+#### <del>知有</del>
 
 > <del>太上 下知有之 亓次親譽之 亓次畏之 亓下侮之</del>
 
@@ -753,7 +753,7 @@
 
 ### 62-18
 
-*四有*
+#### 四有
 
 > 故大道廢 安有仁義
 
@@ -765,7 +765,7 @@
 
 ### 63-19
 
-*樸素*
+#### 樸素
 
 > 絕知棄辯 民利百倍
 
@@ -779,7 +779,7 @@
 
 ### 64-20
 
-*食母*
+#### 食母
 
 > 唯與訶 亓相去幾何 美與惡 亓相去何若
 
@@ -799,7 +799,7 @@
 
 ### 65-21
 
-*從道*
+#### 從道
 
 > 孔德之容 唯道是從 道之物 唯朢唯忽
 
@@ -813,7 +813,7 @@
 
 ### 66-24
 
-*弗居*
+#### 弗居
 
 > 炊者不立 自視者不彰 自見者不明 自伐者無功 自矜者不長
 
@@ -821,7 +821,7 @@
 
 ### 67-22
 
-*執一*
+#### 執一
 
 > 曲則全 枉則正 洼則盈 敝則新 少則得 多則惑
 
@@ -835,7 +835,7 @@
 
 ### 68-23
 
-*同道*
+#### 同道
 
 > 希言自然
 
@@ -851,7 +851,7 @@
 
 ### 69-25
 
-*昆成*
+#### 昆成
 
 > 有物昆成 先天地生
 
@@ -869,7 +869,7 @@
 
 ### 70-26
 
-*輜重*
+#### 輜重
 
 > 重爲巠根 清爲趮君
 
@@ -883,7 +883,7 @@
 
 ### 71-27
 
-*曳明*
+#### 曳明
 
 > 善行者無轍迹 善言者無瑕適 善數者不用檮策 善閉者無關籥而不可啟也 善結者無纆約而不可解也
 
@@ -895,7 +895,7 @@
 
 ### 72-28
 
-*恆德*
+#### 恆德
 
 > 知亓雄 守亓雌 爲天下溪 爲天下溪 恆德不離 恆德不離 復歸嬰兒
 
@@ -907,7 +907,7 @@
 
 ### 73-29
 
-*自然*
+#### 自然
 
 > 將欲取天下而爲之 吾見亓弗得已
 
@@ -923,7 +923,7 @@
 
 ### 74-30
 
-*不強*
+#### 不強
 
 > 以道佐人主 不以兵強於天下 亓事好還
 
@@ -937,7 +937,7 @@
 
 ### 75-31
 
-*貴左*
+#### 貴左
 
 > 夫兵者 不祥之器也 物或惡之 故有欲者弗居
 
@@ -957,7 +957,7 @@
 
 ### 76-32
 
-*知止*
+#### 知止
 
 > 道恆無名
 
@@ -971,7 +971,7 @@
 
 ### 77-33
 
-*盡己*
+#### 盡己
 
 > 知人者 知也 自知者 明也
 
@@ -983,7 +983,7 @@
 
 ### 78-34
 
-*成大*
+#### 成大
 
 > 道渢呵 亓可左右也
 
@@ -995,7 +995,7 @@
 
 ### 79-35
 
-*大象*
+#### 大象
 
 > 執大象 天下往 往而不害 安平大
 
@@ -1005,7 +1005,7 @@
 
 ### 80-36
 
-*微明*
+#### 微明
 
 > 將欲翕之 必固張之 將欲弱之 必固強之 將欲去之 必固與之 將欲奪之 必固予之 是謂微明
 
@@ -1015,7 +1015,7 @@
 
 ### 81-37
 
-*無名*
+#### 無名
 
 > 道恆無名
 
