录入《解码「道德经」：模型及实例》中的译文
与之前既有内容重合或不同的部分，需进一步研修

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -14,6 +14,8 @@
 
 > 故失道而后德 失德而后仁 失仁而后義 失義而后禮 夫禮者 忠信之泊也 而亂之首也
 
+所以，无法跟随源头规律空间的话，只有退而谋求基于规律的方法。
+
 > 前識者 道之華也 而愚之首也
 
 > 是以大丈夫居亓厚而不居亓泊 居亓實而不居亓華 故去彼取此
@@ -126,7 +128,9 @@
 
 > 爲學者日益 聞道者日損 損之又損 以至於無爲 無爲而無不爲
 
-体察道的人，愿意运用、应用的规律一天比一天少（搁置的规律一天比一天多）。愿意运用、应用的规律越来越少（搁置的规律越来越多），不断逼近，最终达到不做任何事的状态。什么也不做而没有什么是做不成的。
+致力于增进知识的人，收获的知识一天比一天多；体察道的人，愿意运用、应用的规律一天比一天少（搁置的规律一天比一天多）。愿意运用、应用的规律越来越少（搁置的规律越来越多），不断逼近，最终达到不做任何事的状态。什么也不做而没有什么是做不成的。
+
+无为作为极限状态，永远无法达到，只可能不断逼近。无不为同理。
 
 > 將欲取天下也 恆無事 及亓有事也 不足以取天下
 
@@ -168,7 +172,11 @@
 
 > 道生之而德畜之 物形之而器成之
 
+规律空间产出的，通过基于相关规律的方法为己所用。
+
 > 是以萬物尊道而貴德
+
+因此，万物尊从规律空间的支配，又视基于相关规律的方法为宝。
 
 > 道之尊也 德之貴也 夫莫之爵也 而恆自然也
 
@@ -315,6 +323,8 @@
 > 爲無爲 事無事 味無味
 
 > 大小多少 報怨以德
+
+用上等的基于规律的方法回应怨。
 
 > 圖難乎亓易也 爲大乎亓細也 天下之難作於易 天下之大作於細
 
@@ -546,6 +556,10 @@
 
 > 道可道也 非恆道也
 
+当人类称其能够（认识和）描述的那部分规律空间为「道」的时候，并未涵盖衍生出它的那部分规律空间，不是指「恒道」。
+
+规律空间中衍生关系的存在意味着人类永远有无法涉及的那部分源头规律空间。由此，当正确使用「道」一词时，实际指向的是「恒道」。
+
 > 名可名也 非恆名也
 
 > 無名萬物之始也
@@ -553,6 +567,10 @@
 > 有名萬物之母也
 
 > 故恆無欲也 以觀亓眇 恆有欲也 以觀亓所徼
+
+因此，源头规律空间因其作用对象范围超然于人类的感知想象能力极限之外，人类唯有细致敏锐的捕捉才能有所体察；源头规律空间经由其衍生出的人类感知想象能力范围之内的规律发生作用，人类得以观察这种作用的范围和边界。
+
+无欲、有欲指的是源头规律空间作用可触发人类感知想象的两种不同状态：处于飘渺存在的状态、处于可观测的状态。
 
 > 兩者同出 異名同謂 玄之又玄 眾眇之門
 
