--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -6,11 +6,11 @@
 
 #### 論德
 
-> 上德不德 是以有德 下德不失德 是以無德
+> 上德不德 是以有德 下德不失德 是以无德
 
 上等的方法不再是方法，由此而处于德（基于道的范式）的状态；下等的方法不失为是一种方法，由此而不处于德（基于道的范式）的状态。
 
-> 上德無爲 而無以爲也 上仁爲之 而無以爲也 上義為之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
+> 上德无爲 而无以爲也 上仁爲之 而无以爲也 上義為之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
 
 > 故失道而后德 失德而后仁 失仁而后義 失義而后禮 夫禮者 忠信之泊也 而亂之首也
 
