完成 5-42 含意解释

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -64,15 +64,47 @@
 
 #### 中和
 
+```
+该篇是声色俱厉地警告人类中的尖端。
+```
+
 > 道生一 一生二 二生三 三生萬物
+
+```
+展示「规律空间（道）」模型的衍生性。
+```
 
 > 萬物負陰而抱陽 中氣以爲和
 
+```
+展示「生、存、长……」模型的中和性。
+- 该模型尚未得到足够的研究。目前，仅以此段话得以识别出该模型的存在。
+- 生的中和：生即有，有对无。此中和发生于有无的维度。
+- 生之后的中和：任何生后存在下去的都有至少一个可以被中和的对应方。
+- 该模型中，不同维度之间具有某种依赖关系。如：生是其后维度的基础。
+```
+
 > 天下之所惡 唯孤 寡 不穀 而王公以自名也
+
+```
+指出王公们想作不可被中和的单极。而这是不符合「生、存、长……」模型中生之后的中和的。
+- 这意味着：不可被中和的单极无法存在下去，只会在生的中和里陷入从无到有、从有到无的重复。
+- 「天下」不是指人类，而是规律空间（道）及其衍生的万物（包括人类）。
+```
 
 > 勿或損之而益 益之而損 故人之所教 夕議而教人
 
 > 故強良者不得死 我將以爲學父
+
+所以，硬要搞这种独一份的人死无葬生之地，我要把他们作为令人生畏的反面教材。
+
+```
+强：硬要、硬来
+良：其认为是好的、不可被中和的单极。
+學父：令人恭敬的学习对象。但这只是表面表达。实际上恭敬是因为：
+- 后果恐怖而令人生畏。
+- 骇人的话要包裹在高档的糖纸里才能说（此段用「良」字也有一层类似的考虑）。
+```
 
 ### 6-43
 
