79-35 中检测真伪「道」内容部分完成

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1059,6 +1059,12 @@
 
 > 故道之出言也 曰淡呵亓无味也 視之不足見也 聽之不足聞也 用之不可既也
 
+所以，基于道而来的内容，说起来是：淡得没有任何味道、看不见、听不着、用不完的。
+
+```
+该段可作为检验任何内容是否为基于「道」的一种测试，以过滤与「道」无关的内容。
+```
+
 ### 80-36
 
 #### 微明
