--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -685,11 +685,27 @@
 
 > 上善治水 水善利萬物而有靜 居眾之所惡 故幾於道矣
 
-关于善长，上等的善长是善长像水一样。水善长向任何事物提供利益，但也能保持安静、不扰动，具备让万物沉浸于水的收纳性。水总是往低处流，最终停留在低处。这自然是天性憧憬人往高处走的人们所厌恶的。所以，水的特征几乎等同于道的特征。
+关于善长，上等的善长是善长治水。水善长向任何事物提供利益，但也能保持安静、不扰动，具备让万物沉浸于水的收纳性。水总是往低处流，最终停留在低处。这自然是天性憧憬人往高处走的人们所厌恶的。所以，水的特征几乎等同于道的特征。
+
+```
+「上善治水」与「上善如/似/若水」都可以有通顺的解释。
+上善如水：
+- 关于善长，上等的善长是善长像水一样。水善长向任何事物提供利益，但也能保持安静、不扰动，具备让万物沉浸于水的收纳性。水总是往低处流，最终停留在低处。这自然是天性憧憬人往高处走的人们所厌恶的。所以，水的特征几乎等同于道的特征。
+选用「上善治水」的原因：
+- 「上善如/似/若水」因其模仿道的属性而远比「上善治水」更不现实。
+- 不能排除「上善治水」以同音同时表达「治」与「似」的可能性。
+- 《道德经》中，政（正）是一大主题；水是核心比喻之一；治水是高难度的。
+- 另篇中对水有「以亓無以易之」的描述。说明水像道一样具有不可移除性。唯一的应对方式是治。
+- 另篇中「不善坐 而進此」，「善」在帛书乙本中被替换为「若」。此处，乙本以「如」替换「治」。「若」、「如」同意，两处皆以此意近音字替换。
+```
 
 > 居善地 心善淵 予善天 言善信 正善治 事善能 動善時
 
-> 夫唯不争 故無尤
+居则善于选择地点；思维则善于深广；给出则善于符合、顺应其所处的子规律空间；表达则善于有信用；为政则善于治；做事则善于有能力；动则善于在时机完美时发生。
+
+> 夫唯不争 故无尤
+
+只有不争，因而杜绝遭受由过失招致的灾祸。
 
 ### 53-9
 
