完成 25-62 解释。依据帛书甲改字。依据解释改分段。

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -346,13 +346,64 @@
 
 #### 道注
 
-> 道者 萬物之注也 善人之寳也 不善人之所保也 美言可以市 尊行可以賀人
+> 道者 萬物之注也 善人之寳也 不善人之所寳也
 
-> 人之不善 何棄之有
+道（规律空间），注入于所有事物，是善长闻道修徳的人的至宝；是不善长闻道修徳的人所要奉为至宝的。
 
-> 故立天子 置三卿 雖有拱之璧以先四馬 不善坐 而進此
+```
+「善人」：善长闻道修徳的人。
+「不善人」：不善长闻道修徳的人。
+「寳」于马王堆帛书甲中所用汉字：U+24A37。
+「之寳」：表示拥有宝。
+「之所寳」：表示向往拥有宝，即不拥有宝。
+```
 
-> 古之所以貴此者何 不謂求以得 有罪以免與 故爲天下貴
+> 美言可以市 尊行可以賀人 人之不善 何棄之有
+
+好听的言语有可以促成交换、交易的效用；高尚的行为有可以提升此人在他人心中价值的效用。不善长闻道修徳的人们，他们一无所有，没有什么可供他们丢弃的。
+
+```
+利用汉字多重含意交织构造文本（《道德经》撰文技术之一）：
+- 不能排除「美言」、「尊行」的例子借由前文与后文中「善」除具善长的本意外，兼具好之意。
+- 另一典型例子如「天下有道 卻走馬以糞」一篇。
+```
+
+> 故立天子 置三卿 雖有共之璧以先四馬 不善坐 而進此
+
+所以，竖立天子，设置三卿，虽然有高贵的乘具，却不善于乘坐，而是在闻道修徳上图长进。
+
+```
+不是其他版本中的「不若坐」，而是马王堆帛书甲中的「不善坐」：
+- 「共之璧以先四馬」指代高贵的乘具。
+- 「雖有……不善……而」的句型结构。
+- 符合整篇内容按顺序至此的逻辑。
+- 原文写为「不善坐而進此」也可，但容易使读者理解上更困难。
+```
+
+> 古之所以貴此者何也 不胃求以得 有罪以免輿 故爲天下貴
+
+为什么上古有人以闻道修徳为贵？不是说要以此寻求得到什么。而是在有罪的情况下获得免于死亡的机会。因此，闻道修徳在所有宇宙中都被奉为至宝。
+
+```
+「有罪以免輿」
+《道德经》中「罪」字只出现于两处。
+- 另一处为「罪莫大於可欲 禍莫大於不知足 咎莫憯於欲得」。
+「輿」：有一类用法与丧事相关：
+- 輿櫬（用車拉着棺材。表示有罪當死或就死之意。）
+- 輿尸（以車運屍。）
+- 輿棺（載棺以隨，以示決死。）
+- 輿機（置屍於機上擡之。機，擡屍之牀。用指出殯。）
+两对字的对应：
+- 「有」、「免」
+- 「罪」、「輿」
+两对分别组合而得一对词汇对应：「有罪」、「免輿」。
+「免輿」：免于遭受因为罪而招致的死亡。
+- 「輿」在此用于非常含蓄地表示死亡。减少读者的不适。
+- 「免」是如何做得到的？闻道修徳而不争而不入死地。不入死地则免于死亡。
+「有罪」：
+- 「罪莫大於可欲」谁没有「可欲」？
+- 因此，所有人都有罪。
+```
 
 ### 26-63
 
