--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -38,7 +38,7 @@
 
 > 夫是以侯王自謂曰孤 寡 不榖 此亓賤之爲本與 非也
 
-> 故致數與無與 是故不欲祿祿若玉 硌硌若石
+> 故致數與无與 是故不欲祿祿若玉 硌硌若石
 
 ### 3-41
 
@@ -46,7 +46,7 @@
 
 > 上士聞道 堇而行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
 
-> 是以建言有之曰 明道如費 進道如退 夷道如纇 上德如浴 大白如辱 廣德如不足 建德如偷 質真如渝 大方無隅 大器免成 大音希聲 天象無形 道殷無名
+> 是以建言有之曰 明道如費 進道如退 夷道如纇 上德如浴 大白如辱 廣德如不足 建德如偷 質真如渝 大方无隅 大器免成 大音希聲 天象无形 道殷无名
 
 > 夫唯道 善始且善成
 
@@ -58,7 +58,7 @@
 
 > 反也者 道之動也 弱也者 道之用也
 
-> 天下之物生於有 有生於無
+> 天下之物生於有 有生於无
 
 ### 5-42
 
@@ -112,11 +112,11 @@
 
 > 天下之至柔 馳騁於天下之致堅
 
-> 無有入於無間 吾是以知無為之有益
+> 无有入於无間 吾是以知无為之有益
 
 无形的能够进入没有任何缝隙之处。
 
-> 不言之教 無為之益 天下希能及之矣
+> 不言之教 无為之益 天下希能及之矣
 
 ### 7-44
 
@@ -142,7 +142,7 @@
 
 #### 知足
 
-> 天下有道 卻走馬以糞 天下無道 戎馬生於郊
+> 天下有道 卻走馬以糞 天下无道 戎馬生於郊
 
 > 罪莫大於可欲 禍莫大於不知足 咎莫憯於欲得
 
@@ -162,21 +162,21 @@
 
 ### 11-48
 
-#### 無爲
+#### 无爲
 
-> 爲學者日益 聞道者日損 損之又損 以至於無爲 無爲而無不爲
+> 爲學者日益 聞道者日損 損之又損 以至於无爲 无爲而无不爲
 
 致力于增进知识的人，收获的知识一天比一天多；体察道的人，愿意运用、应用的规律一天比一天少（搁置的规律一天比一天多）。愿意运用、应用的规律越来越少（搁置的规律越来越多），不断逼近，最终达到不做任何事的状态。什么也不做而没有什么是做不成的。
 
 无为作为极限状态，永远无法达到，只可能不断逼近。无不为同理。
 
-> 將欲取天下也 恆無事 及亓有事也 不足以取天下
+> 將欲取天下也 恆无事 及亓有事也 不足以取天下
 
 ### 12-49
 
 #### 德善
 
-> 聖人恆無心 以百姓之心為心
+> 聖人恆无心 以百姓之心為心
 
 > 善者善之 不善者亦善之 德善也
 
@@ -198,9 +198,9 @@
 
 > 夫何故也 以亓生生也
 
-> 蓋聞善攝生者 陵行不辟兕虎 入軍不被甲兵 兕無所椯亓角 虎無所措亓爪 兵無所容亓刃
+> 蓋聞善攝生者 陵行不辟兕虎 入軍不被甲兵 兕无所椯亓角 虎无所措亓爪 兵无所容亓刃
 
-> 夫何故也 以亓無死地焉
+> 夫何故也 以亓无死地焉
 
 因为没有可以让其死去的场所。
 
@@ -288,11 +288,11 @@
 
 #### 治邦
 
-> 以正之邦 以畸用兵 以無事取天下 吾何以知亓然也
+> 以正之邦 以畸用兵 以无事取天下 吾何以知亓然也
 
 > 夫天下多忌諱 而民彌貧 民多利器 而邦滋昏 人多知 而奇物滋起 法物滋彰 而盜賊多有
 
-> 是以聖人之言曰 我無爲而民自化 我好靜而民自正 我無事而民自富 我欲不欲而民自樸
+> 是以聖人之言曰 我无爲而民自化 我好靜而民自正 我无事而民自富 我欲不欲而民自樸
 
 ### 21-58
 
@@ -302,7 +302,7 @@
 
 > 禍 福之所倚 福 禍之所伏 孰知亓極
 
-> 亓無正也 正復爲奇 善復爲訞
+> 亓无正也 正復爲奇 善復爲訞
 
 > 人之迷也 亓日固久矣
 
@@ -314,7 +314,7 @@
 
 > 治人事天 莫若嗇
 
-> 夫唯嗇 是以蚤服 蚤服是謂重積德 重積德則無不克 無不克則莫知亓極 莫知亓極 可以有國 有國之母 可以長久
+> 夫唯嗇 是以蚤服 蚤服是謂重積德 重積德則无不克 无不克則莫知亓極 莫知亓極 可以有國 有國之母 可以長久
 
 > 是謂深根固柢 長生久視之道也
 
@@ -407,9 +407,9 @@
 
 ### 26-63
 
-#### 無難
+#### 无難
 
-> 爲無爲 事無事 味無味
+> 爲无爲 事无事 味无味
 
 > 大小多少 報怨以德
 
@@ -423,7 +423,7 @@
 
 > 夫輕諾必寡信 多易必多難
 
-> 是以聖人猶難之 故終於無難
+> 是以聖人猶難之 故終於无難
 
 ### 27-64
 
@@ -433,7 +433,7 @@
 
 > 合抱之木 生於毫末 九成之臺 作於羸土 百仞之高 始於足下
 
-> 爲之者敗之 執之者失之 是以聖人無爲也 故無敗也 無執也 故無失也 民之從事也 恆於亓成而敗之 故慎終若始 則無敗事矣
+> 爲之者敗之 執之者失之 是以聖人无爲也 故无敗也 无執也 故无失也 民之從事也 恆於亓成而敗之 故慎終若始 則无敗事矣
 
 > 是以聖人欲不欲 而不貴難得之貨 學不學 而復眾人之所過 能輔萬物之自然 而弗敢爲
 
@@ -455,7 +455,7 @@
 
 > 江海所以能爲百浴王者 以亓善下之 是以能爲百浴王
 
-> 是以聖人之欲上民也 必以亓言下之 欲先民也 必以亓身後之 故居前而民弗害也 居上而民弗重也 天下樂推而弗猒也 非以亓無諍與 故天下莫能與諍
+> 是以聖人之欲上民也 必以亓言下之 欲先民也 必以亓身後之 故居前而民弗害也 居上而民弗重也 天下樂推而弗猒也 非以亓无諍與 故天下莫能與諍
 
 ### 30-80
 
@@ -463,7 +463,7 @@
 
 > 小邦寡民
 
-> 使十百人之器毋用 使民重死而遠徙 有車周無所乘之 有甲兵無所陳之 使民復結繩而用之
+> 使十百人之器毋用 使民重死而遠徙 有車周无所乘之 有甲兵无所陳之 使民復結繩而用之
 
 > 甘亓食 美亓服 樂亓俗 安亓居
 
@@ -475,7 +475,7 @@
 
 > 信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
 
-> 聖人無積 既以爲人 己愈有 既以予人 己愈多
+> 聖人无積 既以爲人 己愈有 既以予人 己愈多
 
 > 故天之道 利而不害 人之道 爲而弗爭
 
@@ -513,9 +513,9 @@
 
 > 用兵有言曰 吾不敢爲主而爲客 不敢進寸而芮尺
 
-> 是謂行無行 攘無臂 執無兵 乃無敵矣
+> 是謂行无行 攘无臂 執无兵 乃无敵矣
 
-> 禍莫大於無適 無適近亡吾寶矣
+> 禍莫大於无適 无適近亡吾寶矣
 
 > 故稱兵相若 則哀者勝矣
 
@@ -527,7 +527,7 @@
 
 我所言非常容易懂，也非常容易做，但是却没有人有能力理解，更别提做了。
 
-> 言有君 事有宗 夫唯無知也 是以不我知
+> 言有君 事有宗 夫唯无知也 是以不我知
 
 > 知我者希 則我貴矣 是以聖人被褐而懷玉
 
@@ -585,7 +585,7 @@
 
 > 民之輕死 以亓求生之厚也 是以輕死
 
-> 夫唯無以生爲者 是賢貴生
+> 夫唯无以生爲者 是賢貴生
 
 ### 41-76
 
@@ -615,7 +615,7 @@
 
 #### 水德
 
-> 天下莫柔弱於水 而攻堅強者莫之能先也 以亓無以易之
+> 天下莫柔弱於水 而攻堅強者莫之能先也 以亓无以易之
 
 > 水之勝剛 弱之勝強 天下莫弗知 而莫能行也
 
@@ -631,9 +631,9 @@
 
 > 是以聖人執右介 而不以責於人
 
-> 故有德司介 無德司徹
+> 故有德司介 无德司徹
 
-> 夫天道無親 恆與善人
+> 夫天道无親 恆與善人
 
 我们所处宇宙中的规律并不亲近任何人，只是永远不变地赋能给那些善长的人。
 
@@ -651,11 +651,11 @@
 
 > 名可名也 非恆名也
 
-> 無名萬物之始也
+> 无名萬物之始也
 
 > 有名萬物之母也
 
-> 故恆無欲也 以觀亓眇 恆有欲也 以觀亓所徼
+> 故恆无欲也 以觀亓眇 恆有欲也 以觀亓所徼
 
 因此，源头规律空间因其作用对象范围超然于人类的感知想象能力极限之外，人类唯有细致敏锐的捕捉才能有所体察；源头规律空间经由其衍生出的人类感知想象能力范围之内的规律发生作用，人类得以观察这种作用的范围和边界。
 
@@ -670,9 +670,9 @@
 
 > 天下皆知美爲美 惡已 皆知善 訾不善矣
 
-> 有無之相生也 難易之相成也 長短之相形也 高下之相盈也 音聲之相和也 先後之相隨 恆也
+> 有无之相生也 難易之相成也 長短之相形也 高下之相盈也 音聲之相和也 先後之相隨 恆也
 
-> 是以聖人居無爲之事 行不言之教
+> 是以聖人居无爲之事 行不言之教
 
 > 萬物 作而弗始也 爲而弗恃也 成功而弗居也 夫唯弗居 是以弗去
 
@@ -686,7 +686,7 @@
 
 > 是以聖人之治也 虛亓心 實亓腹 弱亓志 強亓骨
 
-> 恆使民無知無欲也 使夫知不敢 弗爲而已 則無不治矣
+> 恆使民无知无欲也 使夫知不敢 弗爲而已 則无不治矣
 
 ### 48-4
 
@@ -720,7 +720,7 @@
 
 ### 51-7
 
-#### 無私
+#### 无私
 
 > 天長地久 天地之所以能長且久者 以亓不自生也 故能長生
 
@@ -728,7 +728,7 @@
 
 因此智慧的人把自己变化到更细粒度的维度中去从而让自身居于前端；到更粗粒度的维度中去从而让自身得以保存。（在两种情况中，都由于去到了不同维度中而使可见度被极大地降低了。“芮”、“外”就是用于描述这两种状况的。人类系统在很多情况下可以被看作是一个由每一个人为一个元素组成的元素序列。在这种时候，很多状况有利于居于序列前端的人们。）
 
-> 不以亓無私與 故能成亓私
+> 不以亓无私與 故能成亓私
 
 ### 52-8
 
@@ -746,7 +746,7 @@
 - 「上善如/似/若水」因其模仿道的属性而远比「上善治水」更不现实。
 - 不能排除「上善治水」以同音同时表达「治」与「似」的可能性。
 - 《道德经》中，政（正）是一大主题；水是核心比喻之一；治水是高难度的。
-- 另篇中对水有「以亓無以易之」的描述。说明水像道一样具有不可移除性。唯一的应对方式是治。
+- 另篇中对水有「以亓无以易之」的描述。说明水像道一样具有不可移除性。唯一的应对方式是治。
 - 另篇中「不善坐 而進此」，「善」在帛书乙本中被替换为「若」。此处，乙本以「如」替换「治」。「若」、「如」同意，两处皆以此意近音字替换。
 ```
 
@@ -782,7 +782,7 @@
 
 ### 54-10
 
-#### 無不爲
+#### 无不爲
 
 > 戴營魄抱一 能毋離乎 摶氣至柔 能嬰兒乎
 
@@ -798,13 +798,13 @@
 
 #### 玄中
 
-> 卅輻同一轂 當亓無 有車之用也
+> 卅輻同一轂 當亓无 有車之用也
 
-> 埏埴爲器 當亓無 有埴器之用也
+> 埏埴爲器 當亓无 有埴器之用也
 
-> 鑿戶牖 當亓無 有室之用也
+> 鑿戶牖 當亓无 有室之用也
 
-> 故有之以爲利 無之以爲用
+> 故有之以爲利 无之以爲用
 
 ### 56-12
 
@@ -822,7 +822,7 @@
 
 > 何謂寵辱若驚 寵之爲下 得之若驚 失之若驚 是謂寵辱若驚
 
-> 何謂貴大患若身 吾所以有大患者 爲吾有身也 及吾無身 有何患
+> 何謂貴大患若身 吾所以有大患者 爲吾有身也 及吾无身 有何患
 
 我会有大麻烦的原因，在于我有身体。等我没有身体，我还会有什么麻烦呢？
 
@@ -834,9 +834,9 @@
 
 > 視之而弗見 名之曰微 聽之而弗聞 名之曰希 捪之而弗得 名之曰夷 三者不可至計 故混而爲一
 
-> 一者 亓上不攸 亓下不忽 尋尋呵 不可名也 復歸於無物
+> 一者 亓上不攸 亓下不忽 尋尋呵 不可名也 復歸於无物
 
-> 是謂無狀之狀 無物之象 是謂惚恍 隨而不見亓後 迎而不見亓首
+> 是謂无狀之狀 无物之象 是謂惚恍 隨而不見亓後 迎而不見亓首
 
 > 執今之道 以御今之有 以知古始 是謂道紀
 
@@ -894,11 +894,11 @@
 
 > 絕僞棄慮 民復孝茲
 
-> 絕巧棄利 盜賊無有
+> 絕巧棄利 盜賊无有
 
 > 此三言也 以爲文未足 故令之有所屬
 
-> 見素抱樸 少私寡欲 絕學無憂
+> 見素抱樸 少私寡欲 絕學无憂
 
 ### 64-20
 
@@ -912,11 +912,11 @@
 
 > 眾人巸巸 若鄉於大牢 而春登臺
 
-> 我泊焉未兆 若嬰兒未咳 纍呵 似無所歸
+> 我泊焉未兆 若嬰兒未咳 纍呵 似无所歸
 
 > 眾人皆有餘 我獨遺 我愚人之心也 湷湷呵 鬻人昭昭 我獨呵 鬻人蔡蔡 我獨悶悶呵
 
-> 忽呵 亓若海 朢呵 亓若無所止
+> 忽呵 亓若海 朢呵 亓若无所止
 
 > 眾人皆有以 我獨頑以悝 吾欲獨異於人 而貴食母
 
@@ -938,7 +938,7 @@
 
 #### 弗居
 
-> 炊者不立 自視者不彰 自見者不明 自伐者無功 自矜者不長
+> 炊者不立 自視者不彰 自見者不明 自伐者无功 自矜者不長
 
 > 亓在道也 曰餘食贅行 物或惡之 故有欲者弗居
 
@@ -1008,9 +1008,9 @@
 
 #### 曳明
 
-> 善行者無轍迹 善言者無瑕適 善數者不用檮策 善閉者無關籥而不可啟也 善結者無纆約而不可解也
+> 善行者无轍迹 善言者无瑕適 善數者不用檮策 善閉者无關籥而不可啟也 善結者无纆約而不可解也
 
-> 是以聖人恆善救人 而無棄人 物無棄財 是謂曳明
+> 是以聖人恆善救人 而无棄人 物无棄財 是謂曳明
 
 > 故善人 善人之師 不善人 善人之齎也
 
@@ -1024,9 +1024,9 @@
 
 > 知亓白 守亓辱 爲天下浴 爲天下浴 恆德乃足 德乃足 復歸於樸
 
-> 知亓白 守亓黑 爲天下式 爲天下式 恆德不忒 恆德不忒 復歸於無極
+> 知亓白 守亓黑 爲天下式 爲天下式 恆德不忒 恆德不忒 復歸於无極
 
-> 樸散則爲器 聖人用則爲官長 夫大制無割
+> 樸散則爲器 聖人用則爲官長 夫大制无割
 
 ### 73-29
 
@@ -1082,7 +1082,7 @@
 
 #### 知止
 
-> 道恆無名
+> 道恆无名
 
 > 楃唯小 而天下弗敢臣
 
@@ -1112,7 +1112,7 @@
 
 > 成功遂事 而弗名有也 萬物歸焉而弗爲主
 
-> 則恆無欲也 可名於小 萬物歸焉而弗爲主 可名於大
+> 則恆无欲也 可名於小 萬物歸焉而弗爲主 可名於大
 
 > 是以聖人之能成大也 以亓不爲大也 故能成大
 
@@ -1144,15 +1144,15 @@
 
 ### 81-37
 
-#### 無名
+#### 无名
 
-> 道恆無名
+> 道恆无名
 
 > 侯王若守之 萬物將自化
 
-> 化而欲作 吾將貞之以無名之樸
+> 化而欲作 吾將貞之以无名之樸
 
-> 貞之以無名之樸 夫將不辱
+> 貞之以无名之樸 夫將不辱
 
 > 不辱以靜 天地將自正
 
