完成 4-40 的解释

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -58,7 +58,18 @@
 
 > 反也者 道之動也 弱也者 道之用也
 
+起到反向效用的，是道（规律空间）的作为；起到消弱效用的，是道的规矩与约束所驱使的。
+
+```
+「故恆无欲也 以觀亓眇 恆有欲也 以觀亓所噭」有类似的用法：
+- 「无欲」：类似于「道之動」。只描述客观视角可察的状态。
+- 「有欲」：「道之用」。不是类似，而是同样。「用」有隐含的由意志驱使的层面。
+「弱也者」：不是弱者的意思。
+```
+
 > 天下之物生於有 有生於无
+
+宇宙中的东西产生于有，有产生于无。
 
 ### 5-42
 
