破解「人之所教 夕議而教人」并提出4-40与5-42两篇应为同一篇
另为之前说明部分中引用的原文字词加上「」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -105,16 +105,58 @@
 
 > 勿或損之而益 益之而損 故人之所教 夕議而教人
 
+不是对其减损而增益给其他，就是对其增益而减损其他。因此，（在朝中）王公（人）教别人知道要自称某种单极的名称，这些人在朝外与人言事的时候也会教他人知道要自称某种单极的名称。
+
+```
+「勿或損之而益 益之而損」
+- 中和的不断发生意味着涉及该中和的不同方面通过损益不断进行着动态平衡。
+「故」：以此字为分割的本行前后两部分存在逻辑上的递进关系。
+「夕」：与「朝」相对。而「朝」涉「朝中」之意。
+- 暗合前一部分「损」、「益」相对的结构。
+- 匹配「人之所教」中「人」指代的是王公的场景。
+- 「朝」字未显而含。
+两对成对的结构：
+- 前半段：「损」前「益」后，至「益」前「损」后。
+- 后半段：「人」前「教」后，至「教」前「人」后。
+- 前半段：「损」对「益」。
+- 后半段：「朝」对「夕」。
+```
+
 > 故強良者不得死 我將以爲學父
 
 所以，硬要搞这种独一份的人死无葬生之地，我要把他们作为令人生畏的反面教材。
 
 ```
-强：硬要、硬来
-良：其认为是好的、不可被中和的单极。
-學父：令人恭敬的学习对象。但这只是表面表达。实际上恭敬是因为：
+「强」：硬要、硬来
+「良」：其认为是好的、不可被中和的单极。
+「學父」：令人恭敬的学习对象。但这只是表面表达。实际上恭敬是因为：
 - 后果恐怖而令人生畏。
 - 骇人的话要包裹在高档的糖纸里才能说（此段用「良」字也有一层类似的考虑）。
+```
+
+```
+4-40与5-42两篇应为同一篇被后人拆分成了两篇，即：
+
+反也者 道之動也 弱也者 道之用也
+天下之物生於有 有生於无
+道生一 一生二 二生三 三生萬物
+萬物負陰而抱陽 中氣以爲和
+天下之所惡 唯孤 寡 不穀 而王公以自名也
+勿或損之而益 益之而損 故人之所教 夕議而教人
+故強良者不得死 我將以爲學父
+
+该篇的完整逻辑顺序，以行为单位逐行看：
+- 从被中和者（同时也是警告的对象）的主观视角，看道规约的中和。
+- 从离读者最近的万物，溯源至有，再至更远的无。
+- 从离读者最远的道，衍生至离读者最近的万物。
+- 从离读者最近的万物层面，从全局视角，看无处不在的中和。
+- 基于中和，引入反面例子。
+- 基于中和，点出反例所处的现实逻辑。
+- 含蓄用字而直接的警告。
+
+由此可见，多种整体性支持两篇原为一篇的推论：
+- 视角的主观与全局、近与远的变化与平滑衔接运用得非常漂亮。
+- 警告对象于开篇即被指向、于篇中被点明、于篇尾被呼应。
 ```
 
 ### 6-43
