--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -578,11 +578,21 @@
 
 > 吾言甚易知也 甚易行也 而人莫之能知也 而莫之能行也
 
-我所言非常容易懂，也非常容易做，但是却没有人有能力理解，更别提做了。
+我所言非常容易懂，非常容易做，但是却没有人有能力理解，更别提做了。
 
 > 言有君 事有宗 夫唯无知也 是以不我知
 
+表达是有主旨的，事情是有脉络的。只有无知、不懂的人，才会不懂我。
+
 > 知我者希 則我貴矣 是以聖人被褐而懷玉
+
+懂我的人稀少，我自然珍贵。因此，圣人外表穿得是低贱的粗布衣服，内里含有的却是高贵的玉。
+
+```
+「知我者希 則我貴矣 是以聖人被褐而懷玉」
+- 这句的内里逻辑之一是：我是圣人。
+- 《道德经》的作者老子，以此含蓄又明确地告诉读者：老子是圣人。
+```
 
 ### 36-71
 
