以帛书甲改45-1中原文的字。对「有」作出解释。

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -718,13 +718,29 @@
 
 > 有名萬物之母也
 
-> 故恆无欲也 以觀亓眇 恆有欲也 以觀亓所徼
+> 故恆无欲也 以觀亓眇 恆有欲也 以觀亓所噭
 
 因此，源头规律空间因其作用对象范围超然于人类的感知想象能力极限之外，人类唯有细致敏锐的捕捉才能有所体察；源头规律空间经由其衍生出的人类感知想象能力范围之内的规律发生作用，人类得以观察这种作用的范围和边界。
 
 无欲、有欲指的是源头规律空间作用可触发人类感知想象的两种不同状态：处于飘渺存在的状态、处于可观测的状态。
 
-> 兩者同出 異名同謂 玄之又玄 眾眇之門
+> 兩者同出 異名同胃 玄之有玄 眾眇之門
+
+```
+马王堆帛书版中，「又」字，甲使用0处，乙使用17处（依据当前版本[维基文库《道德经》甲乙对照本](https://zh.wikisource.org/wiki/老子_%28帛書本%29)）。
+「有」、「又」两个字导致的差异：
+- 「有」：有x，表达x的存在。
+- 「又」：又x，表达x的重复。
+- 「x之有x」：表示一种嵌套结构的存在。x以名词出现（若是形容词，于此则作名词用）。前后两个x未必处于同一维度（「有」字带来的效果，其具备指向不同维度的功能）。
+- 「x之又x」：表示x的重复。x既可以是名词，也可以是动词。前后两个x处于同一维度（「又」字带来的效果，指向同维度内的重复）。
+- 「x之又x」、「x之有x」虽然可以用以表示同样的事物，但也有表示不同事物的场景（如：指向不同维度的情况）。
+此处，「玄」：
+- 不是动词。
+- 虽然，有名词作动词的用法。但帛书甲中的「有」更符合形容词作名词的用法，而不必再进一步转换一次，使其变成动词。
+- 一个子规律空间内，可以用玄来形容；其母规律空间中的某个子规律空间，同样可以用玄来形容。这两个玄并不处于同一个维度内。这更符合「x之有x」的含义。
+即使不使用「有」，而使用「又」，也不会改变「玄之x玄」的指代。
+- 一个子规律空间内的玄这种给人的感觉，在进一步向恒道的方向上的任何一个子规律空间内仍然如是。
+```
 
 
 ### 46-2
