2-39 解释初成。发现一直被错断成「是故」的句子。

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -38,7 +38,36 @@
 
 > 夫是以侯王自謂曰孤 寡 不榖 此亓賤之爲本與 非也
 
-> 故致數與无與 是故不欲祿祿若玉 硌硌若石
+所以，侯王以孤、寡、不榖称呼自己，这是他们把低贱作为自己的基础吗？才不是呢。
+
+```
+「與」：有语气词的用法。
+- 用在句尾表疑問。《墨子•明鬼下》：豈女為之與，意鮑為之與？ 
+- 用在句尾表感歎。《詩•商頌•那》：猗與那與！
+```
+
+> 故致數與无 與是 故不欲祿祿若玉 硌硌若石
+
+```
+「致數」：单极的各种存在。
+- 本篇前文中有「亓致之也」处也使用了「致」。与本处同意。都是到达终点的意思。
+- 上一段「孤 寡 不榖」就是几种例子。
+- 「致」：单极。
+- 「數」：抽象地指代所有情况。
+「與」：相应、相对、相关。
+「是」：此处以一字同时表达多重含义。
+- 正确的。
+- 存在的。
+- 进而指代由本篇前文「故必貴而以賤爲本 必高矣而以下爲基」的道理引出的侯王必须「與賤」、「與下」，而非「致數」所导致的「與无」。
+结构上，「故致數與无 與是」与「故不欲祿祿若玉 硌硌若石」形成对应：
+- 皆以「故」作为句子的开头。
+- 下场「致數與无」对应戒律「不欲祿祿若玉」。形成因果关系。
+- 效果「與是」对应指导「硌硌若石」。形成因果关系。
+- 「故｜致數與无｜與是」与「故｜不欲祿祿若玉｜硌硌若石」同构，且由抽象而具象。
+因此，其他版本「故致數與无與 是故不欲祿祿若玉 硌硌若石」的断句是错误的。另，《道德经》中：
+- 「是故」一词仅此一处。
+- 「故…… 故……」结构仅此一处。其余皆有「故…… …… 故…… ……」的结构。如：「是以聖人无爲也 故无敗也 无執也 故无失也」
+```
 
 ### 3-41
 
