添加 2-39 「亓致之也」相关阐述

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -34,6 +34,16 @@
 
 > 亓致之也 謂天毋已清將恐裂 謂地毋已寧將恐發 謂神毋已霝將恐歇 謂浴毋已盈將恐竭 謂侯王毋已貴以高將恐蹶
 
+```
+「亓致之也」：表示某一状态达到极致而突破极限，从而脱离该状态的范围。
+- 可借用二元论作为例子使该概念更容易理解，但不能以二元论作为所有的情况。因为更多元的情况广泛存在。
+```
+
+```
+此篇前两段举例使用的是二元结构的例子。
+- 从在一元中到达极致，而离开该元，进入另一元。
+```
+
 > 故必貴而以賤爲本 必高矣而以下爲基
 
 > 夫是以侯王自謂曰孤 寡 不榖 此亓賤之爲本與 非也
