完成 1-38「前識者 道之華也 而愚之首也」相关解释

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -18,13 +18,65 @@
 
 > 上德无爲 而无以爲也 上仁爲之 而无以爲也 上義為之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
 
+```
+「德」：符合基于（遵循）道的范式的这种状态的方法。
+- 因为此处该字与「上」结合使用，使该字同时具备双重含义。
+- 参见上一段的相关说明。
+「以爲」：表示有目的性。
+「仁」：向外广泛散发的爱、慈、亲。
+「義」：内心意识施加的规约（规范、约束）。
+「禮」：外表形式施加的规约（规范、约束）。
+```
+
 > 故失道而后德 失德而后仁 失仁而后義 失義而后禮 夫禮者 忠信之泊也 而亂之首也
 
 所以，无法跟随源头规律空间的话，只有退而谋求基于规律的方法。
 
 > 前識者 道之華也 而愚之首也
 
+因为基于外表形式而最容易识别的礼，是道开出的花，漂亮但短暂，且有虚无实，因而，礼是愚昧的开始（不能排除兼具含义：也是最愚昧的）。
+
+```
+「前」：顺序上处于先于其他的位置。
+- 可理解为：优先。
+- 「故居前而民弗害也」即是如此使用该字。
+「識」：辨别。
+- 与《道德经》中常用的「知」不同。
+- 如此处意思与「知」高度类似，为何不直接使用「知」？
+「前識者」：
+- 本段之前两段中按高级到低级顺序排列：道、德、仁、義、禮。
+- 其识别难度从低到高排列正好相反：禮、義、仁、德、道。
+- 禮：外表形式的识别。难度最低。
+- 義：内心意识的识别。
+- 仁：广泛发散的识别。
+- 德与道的识别难度显而易见。
+- 「前識」：识别顺序序列中最先识别的。因为是识别难度顺序中最低的。
+- 另，根据上下文，上一段末尾矛头直指「禮者」。下一段又以此为戒。
+- 本段「道之華也 而愚之首也」也是指向「禮者」。
+- 因而，「前識者」即「禮者」。
+「華」：
+- 漂亮的花。暗含由更基础的事物生成而来。亦有不长久之意（花期很有限）。
+- 华而不实。
+- 具虚、无之意。
+- 可从下一段中该字的用法了解。
+「首」：有开始、开端的意思。
+- 与「尾」相反。
+- 不排除同时兼具「最」的意思。
+愚之首：兼具双重含义。
+- 愚昧的开始。
+- 最愚昧的。
+```
+
 > 是以大丈夫居亓厚而不居亓泊 居亓實而不居亓華 故去彼取此
+
+```
+「大丈夫」：《道德经》仅此一处使用该指代。
+- 为何不使用「君子」？
+- 为何不使用「圣人」？
+「厚」与「泊」相反。
+「實」与「華」相反。
+- 与实相反：「華」有虚、无的意涵。
+```
 
 ### 2-39
 
