完成 46-2「天下皆知美 爲美惡已 皆知善 訾不善矣」错断句更正与解释

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -838,7 +838,29 @@
 
 #### 觀徼
 
-> 天下皆知美爲美 惡已 皆知善 訾不善矣
+> 天下皆知美 爲美惡已 皆知善 訾不善矣
+
+我们所处的宇宙中全都想要得意，追求的是要得意，拥有的讨厌却已经不能再多了；全都想要善长，却不善长盘算。
+
+```
+其他版本中断句错误：
+- 错误断句：「天下皆知美爲美 惡已 皆知善 訾不善矣」
+- 正确句子结构：「天下皆知x 达不成x 皆知y 达不成y」
+「美」：得意。
+- 「美言可以市」
+- 「甘亓食 美亓服 樂亓俗 安亓居」
+- 「勿美也 若美之 是樂殺人也」
+「爲美」：追求的是要得意。
+「惡」：讨厌。
+「惡已」：拥有的讨厌却已经不能再多了。
+「善」：善长。
+「訾」：盘算。
+「訾不善」：不善长盘算。
+- 《道德经》以道为现实环境，德为实现方式，传授如何达成长久。
+- 而人类却读不懂、不愿追求长久。这就是一种愚昧。
+- 这种愚昧，在此处以不善盘算点出来。
+- 因为，一切其他善长都不如善长长久更可贵。连这点都搞不清楚的人类，算得上善长盘算吗？
+```
 
 > 有无之相生也 難易之相成也 長短之相形也 高下之相盈也 音聲之相和也 先後之相隨 恆也
 
