--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -338,15 +338,71 @@
 
 > 出生 入死
 
+出来到生，进去到死。
+
+```
+从人的感官角度：
+- 能阅读的都是仍然处于未「死」状态的人。
+- 「出」：生具有衍生性。虽然都是「生」的状态，却意味着可能性的多样性、开放性。
+- 「入」：对于「生」的空间中的存在而言，「死」的状态盖过一切「死」的空间中的其他。
+```
+
 > 生之徒十有三 死之徒十有三 而民生生 動皆之死地之十有三
+
+有三成是向着生而去的（柔弱微细的），有三成是向着死而去的（硬来的）。而民一直普遍处于生的状态。无论是出，还是入的动作，都向着死地而去的有三成。
+
+```
+「生之徒」、「死之徒」：
+- 「故曰堅強者 死之徒也 柔弱微細 生之徒也」
+- 「生」：同时兼具双重含意。生、柔弱微細的。
+- 「死」：同时兼具双重含意。死、硬来的。
+「動」：上一段中「出」、「入」是动的状态。
+「民生生」：民一直普遍处于生的状态。
+- 类似用法：
+-- 「亓正閔閔 亓民屯屯 亓正察察 亓邦夬夬」
+-- 「綿綿呵若存」
+-- 「聖人之在天下 歙歙焉 為天下渾心」
+- 体会、比较单字与双连字用法的区别：
+-- 「正閔閔」、「正閔」
+-- 「民屯屯」、「民屯」
+-- 「正察察」、「正察」
+-- 「邦夬夬」、「邦夬」
+-- 「民生生」、「民生」
+- 在此类环境中，以双连字方式表示整体的、广泛的、持续的状态。
+- 「民生生」中的「生生」：一直普遍处于生的状态。
+「死地」不同于「死之徒」中的「死」。
+- 「死地」：完成死这一状态的空间（集合）。
+- 「死之徒」中的「死」：死的状态。
+```
 
 > 夫何故也 以亓生生也
 
+为什么？因为民一直普遍处于柔弱微细的状态。
+
+```
+「生生」：一直普遍处于柔弱微细的状态。
+- 与「民生生」中的「生生」含意不同。
+- 此篇两处「生生」各取「生」的两种含意之一，分别用于不同的意思表达。
+- 更多相关信息请参阅上一段的相关注释。
+```
+
 > 蓋聞善攝生者 陵行不辟兕虎 入軍不被甲兵 兕无所椯亓角 虎无所措亓爪 兵无所容亓刃
+
+听说善长获得生的，行走于山野之中不需要躲避猛兽，进入战场之中不需要身着铠甲手持兵器，犀牛般的猛兽没有可以用角攻击的地方，老虎没有可以用爪子攻击的地方，兵器没有可以用锋刃的地方。
 
 > 夫何故也 以亓无死地焉
 
-因为没有可以让其死去的场所。
+为什么？因为没有可以让其死去的场所。
+
+```
+此篇全篇结构：
+开头引文：
+- 「動」：「出」、「入」。
+- 「生」、「死」。
+分别陈述：
+- 效果：「民生生」（），缘由：「生生」。
+- 效果：「善攝生」，缘由：「无死地」。
+```
 
 ### 14-51
 
