暂标记删除含“樸”字四篇
疑似，该四篇皆借《道德经》中“樸”字，以《易经》为原点，移花接木至此

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1088,17 +1088,17 @@
 
 > 執今之道 以御今之有 以知古始 是謂道紀
 
-### 59-15
+### <del>59-15</del>
 
-#### 不盈
+#### <del>不盈</del>
 
-> 古之善爲道者 微眇玄達 深不可志 夫唯不可志 故強爲之容 曰
+> <del>古之善爲道者 微眇玄達 深不可志 夫唯不可志 故強爲之容 曰</del>
 
-> 與呵亓若冬涉水 猶呵亓若畏四鄰 儼呵亓若客 渙呵亓若淩澤 沌呵亓若樸 湷呵亓若濁 莊呵亓若浴
+> <del>與呵亓若冬涉水 猶呵亓若畏四鄰 儼呵亓若客 渙呵亓若淩澤 沌呵亓若樸 湷呵亓若濁 莊呵亓若浴</del>
 
-> 濁而情之余清 安以重之余生
+> <del>濁而情之余清 安以重之余生</del>
 
-> 葆此道不欲盈 夫唯不欲盈 是以能敝而不成
+> <del>葆此道不欲盈 夫唯不欲盈 是以能敝而不成</del>
 
 ### <del>60-16</del>
 
@@ -1134,19 +1134,19 @@
 
 > 邦家昏亂 安有正臣
 
-### 63-19
+### <del>63-19</del>
 
-#### 樸素
+#### <del>樸素</del>
 
-> 絕知棄辯 民利百倍
+> <del>絕知棄辯 民利百倍</del>
 
-> 絕僞棄慮 民復孝茲
+> <del>絕僞棄慮 民復孝茲</del>
 
-> 絕巧棄利 盜賊无有
+> <del>絕巧棄利 盜賊无有</del>
 
-> 此三言也 以爲文未足 故令之有所屬
+> <del>此三言也 以爲文未足 故令之有所屬</del>
 
-> 見素抱樸 少私寡欲 絕學无憂
+> <del>見素抱樸 少私寡欲 絕學无憂</del>
 
 ### 64-20
 
@@ -1264,17 +1264,17 @@
 
 > 不貴亓師 不愛亓齎 唯知乎大眯 是謂眇要
 
-### 72-28
+### <del>72-28</del>
 
-#### 恆德
+#### <del>恆德</del>
 
-> 知亓雄 守亓雌 爲天下溪 爲天下溪 恆德不離 恆德不離 復歸嬰兒
+> <del>知亓雄 守亓雌 爲天下溪 爲天下溪 恆德不離 恆德不離 復歸嬰兒</del>
 
-> 知亓白 守亓辱 爲天下浴 爲天下浴 恆德乃足 德乃足 復歸於樸
+> <del>知亓白 守亓辱 爲天下浴 爲天下浴 恆德乃足 德乃足 復歸於樸</del>
 
-> 知亓白 守亓黑 爲天下式 爲天下式 恆德不忒 恆德不忒 復歸於无極
+> <del>知亓白 守亓黑 爲天下式 爲天下式 恆德不忒 恆德不忒 復歸於无極</del>
 
-> 樸散則爲器 聖人用則爲官長 夫大制无割
+> <del>樸散則爲器 聖人用則爲官長 夫大制无割</del>
 
 ### 73-29
 
@@ -1390,19 +1390,19 @@
 
 > 魚不可脫於淵 邦利器不可以示人
 
-### 81-37
+### <del>81-37</del>
 
-#### 无名
+#### <del>无名</del>
 
-> 道恆无名
+> <del>道恆无名</del>
 
-> 侯王若守之 萬物將自化
+> <del>侯王若守之 萬物將自化</del>
 
-> 化而欲作 吾將貞之以无名之樸
+> <del>化而欲作 吾將貞之以无名之樸</del>
 
-> 貞之以无名之樸 夫將不辱
+> <del>貞之以无名之樸 夫將不辱</del>
 
-> 不辱以靜 天地將自正
+> <del>不辱以靜 天地將自正</del>
 
 
 
