初步完成 14-51 「道生之 畜之 長之 遂之 亭之 毒之 養之 覆之」注释

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -420,6 +420,20 @@
 
 > 道生之 畜之 長之 遂之 亭之 毒之 養之 覆之
 
+```
+正向、生成阶段，以正向由始至成阶段排序：
+- 「生」：产生。
+- 「畜」：保育。
+- 「長」：成长。
+- 「遂」：完成。
+到达正向极限点：
+- 「亭」：停止。
+反向、弱化阶段，以反向由始至成阶段排序：
+- 「毒」：损害。
+- 「養」：消化残余。
+- 「覆」：终结。
+```
+
 > 生而弗有也 爲而弗恃也 長而弗宰也 此之謂玄德
 
 ### 15-52
