标记删除 62-18 「仁義」用作一个词语可疑
《道德经》中此二字分具各自不同含义

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1136,17 +1136,17 @@
 
 > <del>成功遂事 而百姓謂我自然</del>
 
-### 62-18
+### <del>62-18</del>
 
-#### 四有
+#### <del>四有</del>
 
-> 故大道廢 安有仁義
+> <del>故大道廢 安有仁義</del>
 
-> 知慧出 安有大僞
+> <del>知慧出 安有大僞</del>
 
-> 六親不和 安有孝茲
+> <del>六親不和 安有孝茲</del>
 
-> 邦家昏亂 安有正臣
+> <del>邦家昏亂 安有正臣</del>
 
 ### <del>63-19</del>
 
